@@ -1,12 +1,10 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.startup;
 
 import com.intellij.openapi.application.PathManager;
-import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.util.io.FileUtilRt;
+import com.intellij.openapi.util.io.NioFiles;
 import com.intellij.util.io.Decompressor;
 import org.jetbrains.annotations.ApiStatus;
-import org.jetbrains.annotations.NonNls;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -14,7 +12,6 @@ import java.io.*;
 import java.nio.file.*;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -24,28 +21,24 @@ public final class StartupActionScriptManager {
 
   private StartupActionScriptManager() { }
 
+  @ApiStatus.Internal
   public static synchronized void executeActionScript() throws IOException {
     Path scriptFile = getActionScriptFile();
-    List<ActionCommand> commands = null;
-    try {
-      commands = loadActionScript(scriptFile);
-      for (ActionCommand command : commands) {
-        command.execute();
+    if (Files.isRegularFile(scriptFile)) {
+      try {
+        List<ActionCommand> commands = loadActionScript(scriptFile);
+        for (ActionCommand command : commands) {
+          command.execute();
+        }
       }
-    }
-    finally {
-      // deleting a file should not cause an exception
-      if (commands == null /* error occurred on load */ || !commands.isEmpty() /* not empty list means that there is some data */) {
-        Files.deleteIfExists(scriptFile);
+      finally {
+        Files.deleteIfExists(scriptFile);  // deleting a file should not cause an exception
       }
     }
   }
 
-  public static synchronized void executeActionScript(@NotNull Path scriptFile, @NotNull Path oldTarget, @NotNull Path newTarget) throws IOException {
-    executeActionScriptCommands(loadActionScript(scriptFile), oldTarget, newTarget);
-  }
-
-  public static void executeActionScriptCommands(List<? extends ActionCommand> commands,
+  @ApiStatus.Internal
+  public static void executeActionScriptCommands(@NotNull List<? extends ActionCommand> commands,
                                                  @NotNull Path oldTarget,
                                                  @NotNull Path newTarget) throws IOException {
     for (ActionCommand command : commands) {
@@ -56,8 +49,8 @@ public final class StartupActionScriptManager {
     }
   }
 
-  public static synchronized void addActionCommand(ActionCommand command) throws IOException {
-    addActionCommands(Collections.singletonList(command));
+  public static synchronized void addActionCommand(@NotNull ActionCommand command) throws IOException {
+    addActionCommands(List.of(command));
   }
 
   public static synchronized void addActionCommands(@NotNull List<? extends ActionCommand> commands) throws IOException {
@@ -65,75 +58,81 @@ public final class StartupActionScriptManager {
       for (ActionCommand command : commands) {
         command.execute();
       }
-      return;
     }
-
-    List<ActionCommand> script;
-    Path actionScriptFile = getActionScriptFile();
-    try {
-      List<ActionCommand> savedScript = loadActionScript(actionScriptFile);
-      script = new ArrayList<>(savedScript.size() + commands.size());
-      script.addAll(savedScript);
+    else {
+      List<ActionCommand> script = new ArrayList<>(), originalScript = null;
+      Path scriptFile = getActionScriptFile();
+      if (Files.exists(scriptFile)) {
+        originalScript = loadActionScript(scriptFile);
+        script.addAll(originalScript);
+      }
       script.addAll(commands);
-    }
-    catch (ObjectStreamException e) {
-      Logger.getInstance(StartupActionScriptManager.class).warn(e);
-      script = new ArrayList<>(commands);
-    }
 
-    saveActionScript(script, actionScriptFile);
+      try {
+        saveActionScript(script, scriptFile);
+      }
+      catch (Throwable t) {
+        if (originalScript != null) {
+          try {
+            saveActionScript(originalScript, scriptFile);
+          }
+          catch (Throwable tt) { t.addSuppressed(tt); }
+        }
+        throw t;
+      }
+    }
   }
 
-  private static @NotNull Path getActionScriptFile() {
+  private static Path getActionScriptFile() {
     return Path.of(PathManager.getPluginTempPath(), ACTION_SCRIPT_FILE);
   }
 
+  @ApiStatus.Internal
   public static @NotNull List<ActionCommand> loadActionScript(@NotNull Path scriptFile) throws IOException {
-    try (ObjectInput ois = new ObjectInputStream(Files.newInputStream(scriptFile))) {
+    try (ObjectInputStream ois = new ObjectInputStream(Files.newInputStream(scriptFile))) {
       Object data = ois.readObject();
       if (data instanceof ActionCommand[]) {
         return Arrays.asList((ActionCommand[])data);
       }
-      else if (data instanceof List && ((List<?>)data).isEmpty()) {
-        return Collections.emptyList();
-      }
       else {
-        throw new IOException("An unexpected object: " + data + "/" + data.getClass());
+        throw new IOException("An unexpected object: " + data + "/" + data.getClass() + " in " + scriptFile);
       }
     }
     catch (NoSuchFileException | AccessDeniedException e) {
-      return Collections.emptyList();
+      return List.of();
     }
     catch (ReflectiveOperationException e) {
       throw (StreamCorruptedException)new StreamCorruptedException("Stream error: " + scriptFile).initCause(e);
     }
   }
 
-  public static void saveActionScript(@Nullable List<ActionCommand> commands, @NotNull Path scriptFile)
-    throws IOException {
-    if (commands == null) {
-      Files.deleteIfExists(scriptFile);
+  @ApiStatus.Internal
+  public static void saveActionScript(@NotNull List<ActionCommand> commands, @NotNull Path scriptFile) throws IOException {
+    Files.createDirectories(scriptFile.getParent());
+    try (ObjectOutput oos = new ObjectOutputStream(Files.newOutputStream(scriptFile))) {
+      oos.writeObject(commands.toArray(new ActionCommand[0]));
     }
-    else {
-      Files.createDirectories(scriptFile.getParent());
-      try (ObjectOutput oos = new ObjectOutputStream(Files.newOutputStream(scriptFile))) {
-        oos.writeObject(commands.toArray(ActionCommand.EMPTY_ARRAY));
+    catch (Throwable t) {
+      try {
+        Files.deleteIfExists(scriptFile);
       }
+      catch (IOException e) { t.addSuppressed(e); }
+      throw t;
     }
   }
 
-  private static ActionCommand mapPaths(ActionCommand command, Path oldTarget, Path newTarget) {
+  private static @Nullable ActionCommand mapPaths(ActionCommand command, Path oldTarget, Path newTarget) {
     if (command instanceof CopyCommand) {
-      Path destination = mapPath(((CopyCommand)command).destination, oldTarget, newTarget);
+      Path destination = mapPath(((CopyCommand)command).myDestination, oldTarget, newTarget);
       if (destination != null) {
-        return new CopyCommand(Paths.get(((CopyCommand)command).source), destination);
+        return new CopyCommand(Paths.get(((CopyCommand)command).mySource), destination);
       }
     }
     else if (command instanceof UnzipCommand) {
       UnzipCommand unzipCommand = (UnzipCommand)command;
       Path destination = mapPath(unzipCommand.myDestination, oldTarget, newTarget);
       if (destination != null) {
-        return new UnzipCommand(Paths.get(unzipCommand.mySource), destination, unzipCommand.myFilenameFilter);
+        return new UnzipCommand(Path.of(unzipCommand.mySource), destination, unzipCommand.myFilenameFilter);
       }
     }
     else if (command instanceof DeleteCommand) {
@@ -160,47 +159,45 @@ public final class StartupActionScriptManager {
   }
 
   public interface ActionCommand {
-    ActionCommand[] EMPTY_ARRAY = new ActionCommand[0];
     void execute() throws IOException;
   }
 
   public static final class CopyCommand implements Serializable, ActionCommand {
     private static final long serialVersionUID = 201708031943L;
 
-    private final String source;
-    private final String destination;
+    private final String mySource;
+    private final String myDestination;
 
     public CopyCommand(@NotNull Path source, @NotNull Path destination) {
-      this.source = source.toAbsolutePath().toString();
-      this.destination = destination.toAbsolutePath().toString();
+      mySource = source.toAbsolutePath().toString();
+      myDestination = destination.toAbsolutePath().toString();
     }
 
-    /**
-     * @deprecated Use {@link #CopyCommand(Path, Path)}
-     */
+    /** @deprecated Use {@link #CopyCommand(Path, Path)} */
     @Deprecated
     @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
     public CopyCommand(@NotNull File source, @NotNull File destination) {
-      this.source = source.getAbsolutePath();
-      this.destination = destination.getAbsolutePath();
+      mySource = source.getAbsolutePath();
+      myDestination = destination.getAbsolutePath();
     }
 
     @Override
     public void execute() throws IOException {
-      Path destination = Paths.get(this.destination);
-      Path destDir = destination.getParent();
-      Files.createDirectories(destDir);
-      Files.copy(Paths.get(source), destination);
+      Path source = Path.of(mySource), destination = Path.of(myDestination);
+      if (!Files.isRegularFile(source)) {
+        throw new IOException("Source file missing: " + mySource);
+      }
+      Files.createDirectories(destination.getParent());
+      Files.copy(source, destination);
     }
 
     @Override
-    @NonNls
     public String toString() {
-      return "copy[" + source + "," + destination + "]";
+      return "copy[" + mySource + ',' + myDestination + ']';
     }
 
     public String getSource() {
-      return source;
+      return mySource;
     }
   }
 
@@ -215,9 +212,7 @@ public final class StartupActionScriptManager {
       this(source, destination, null);
     }
 
-    /**
-     * @deprecated Use {@link #UnzipCommand(Path, Path)}
-     */
+    /** @deprecated Use {@link #UnzipCommand(Path, Path)} */
     @Deprecated
     public UnzipCommand(@NotNull File source, @NotNull File destination) {
       this(source.toPath(), destination.toPath());
@@ -231,21 +226,17 @@ public final class StartupActionScriptManager {
 
     @Override
     public void execute() throws IOException {
-      Path source = Paths.get(mySource);
-      Path destination = Paths.get(myDestination);
-
+      Path source = Path.of(mySource), destination = Path.of(myDestination);
       if (!Files.isRegularFile(source)) {
-        throw new IOException("Source file missing: " + source);
+        throw new IOException("Source file missing: " + mySource);
       }
-
       Files.createDirectories(destination);
       new Decompressor.Zip(source).filter(myFilenameFilter).extract(destination);
     }
 
     @Override
-    @NonNls
     public String toString() {
-      return "unzip[" + mySource + "," + myDestination + "]";
+      return "unzip[" + mySource + ',' + myDestination + ',' + myFilenameFilter + ']';
     }
 
     public String getSource() {
@@ -262,9 +253,7 @@ public final class StartupActionScriptManager {
       mySource = source.toAbsolutePath().toString();
     }
 
-    /**
-     * @deprecated Use {@link #DeleteCommand(Path)}
-     */
+    /** @deprecated Use {@link #DeleteCommand(Path)} */
     @Deprecated
     public DeleteCommand(@NotNull File source) {
       mySource = source.getAbsolutePath();
@@ -272,15 +261,12 @@ public final class StartupActionScriptManager {
 
     @Override
     public void execute() throws IOException {
-      // source here it is directory - Files.deleteIfExists must be not used here
-      // todo use NioFiles (see IDEA-CR-69550)
-      FileUtilRt.delete(new File(mySource));
+      NioFiles.deleteRecursively(Path.of(mySource));
     }
 
     @Override
-    @NonNls
     public String toString() {
-      return "delete[" + mySource + "]";
+      return "delete[" + mySource + ']';
     }
   }
 }
