@@ -1,9 +1,14 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.plugins;
 
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Caffeine;
 import com.intellij.ide.IdeBundle;
+import com.intellij.ide.plugins.marketplace.MarketplacePluginDownloadService;
 import com.intellij.ide.plugins.marketplace.MarketplaceRequests;
-import com.intellij.ide.plugins.marketplace.PluginModulesHelper;
+import com.intellij.ide.plugins.marketplace.statistics.PluginManagerUsageCollector;
+import com.intellij.ide.plugins.marketplace.statistics.enums.InstallationSourceEnum;
+import com.intellij.ide.plugins.org.PluginManagerFilters;
 import com.intellij.notification.Notification;
 import com.intellij.notification.NotificationGroup;
 import com.intellij.notification.NotificationType;
@@ -14,53 +19,62 @@ import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.progress.ProgressIndicator;
+import com.intellij.openapi.ui.MessageDialogBuilder;
 import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.updateSettings.impl.PluginDownloader;
 import com.intellij.openapi.updateSettings.impl.UpdateSettings;
 import com.intellij.openapi.util.ActionCallback;
-import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.registry.Registry;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.util.SmartList;
 import com.intellij.util.containers.ContainerUtil;
-import org.jetbrains.annotations.ApiStatus;
-import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
+import org.jetbrains.annotations.*;
 
 import java.io.IOException;
 import java.util.*;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 
-public class PluginInstallOperation {
+@ApiStatus.Internal
+public final class PluginInstallOperation {
   private static final Logger LOG = Logger.getInstance(PluginInstallOperation.class);
 
-  private final List<PluginNode> myPluginsToInstall;
-  private final Collection<? extends IdeaPluginDescriptor> myCustomReposPlugins;
-  private final PluginManagerMain.PluginEnabler myPluginEnabler;
-  private final ProgressIndicator myIndicator;
+  private static final Cache<String, Optional<PluginId>> ourCache = Caffeine
+    .newBuilder()
+    .expireAfterWrite(1, TimeUnit.HOURS)
+    .build();
+
+  private final @NotNull List<PluginNode> myPluginsToInstall;
+  private final @NotNull Collection<PluginNode> myCustomReposPlugins;
+  private final @NotNull PluginEnabler myPluginEnabler;
+  private final @NotNull ProgressIndicator myIndicator;
   private boolean mySuccess = true;
   private final Set<PluginInstallCallbackData> myDependant = new HashSet<>();
   private boolean myAllowInstallWithoutRestart = false;
   private final List<PendingDynamicPluginInstall> myPendingDynamicPluginInstalls = new ArrayList<>();
   private boolean myRestartRequired = false;
   private boolean myShownErrors;
+  private MarketplacePluginDownloadService myDownloadService;
 
   /**
-   * @deprecated use {@link #PluginInstallOperation(List, Collection, PluginManagerMain.PluginEnabler, ProgressIndicator)} instead
+   * @deprecated use {@link #PluginInstallOperation(List, Collection, PluginEnabler, ProgressIndicator)} instead
    */
   @ApiStatus.ScheduledForRemoval(inVersion = "2021.1")
   @Deprecated
   public PluginInstallOperation(@NotNull List<PluginNode> pluginsToInstall,
-                                List<? extends IdeaPluginDescriptor> customReposPlugins,
-                                PluginManagerMain.PluginEnabler pluginEnabler,
+                                @NotNull List<? extends IdeaPluginDescriptor> customReposPlugins,
+                                @NotNull PluginManagerMain.PluginEnabler pluginEnabler,
                                 @NotNull ProgressIndicator indicator) {
-    this(pluginsToInstall, (Collection<? extends IdeaPluginDescriptor>)customReposPlugins, pluginEnabler, indicator);
+    this(pluginsToInstall,
+         (Collection<PluginNode>)ContainerUtil.filterIsInstance(customReposPlugins, PluginNode.class),
+         pluginEnabler,
+         indicator);
   }
 
   public PluginInstallOperation(@NotNull List<PluginNode> pluginsToInstall,
-                                Collection<? extends IdeaPluginDescriptor> customReposPlugins,
-                                PluginManagerMain.PluginEnabler pluginEnabler,
+                                @NotNull Collection<PluginNode> customReposPlugins,
+                                @NotNull PluginEnabler pluginEnabler,
                                 @NotNull ProgressIndicator indicator) {
-
     myPluginsToInstall = pluginsToInstall;
     myCustomReposPlugins = customReposPlugins;
     myPluginEnabler = pluginEnabler;
@@ -106,6 +120,10 @@ public class PluginInstallOperation {
     myLocalInstallCallbacks.put(id, callback);
   }
 
+  public void setDownloadService(MarketplacePluginDownloadService downloadService) {
+    myDownloadService = downloadService;
+  }
+
   public void setAllowInstallWithoutRestart(boolean allowInstallWithoutRestart) {
     myAllowInstallWithoutRestart = allowInstallWithoutRestart;
   }
@@ -148,11 +166,10 @@ public class PluginInstallOperation {
     List<String> hosts = new SmartList<>();
     ContainerUtil.addIfNotNull(hosts, ApplicationInfoEx.getInstanceEx().getBuiltinPluginsUrl());
     hosts.addAll(UpdateSettings.getInstance().getPluginHosts());
-    Map<PluginId, IdeaPluginDescriptor> allPlugins = new HashMap<>();
+    Map<PluginId, PluginNode> allPlugins = new HashMap<>();
     for (String host : hosts) {
       try {
-        List<IdeaPluginDescriptor> descriptors = RepositoryHelper.loadPlugins(host, myIndicator);
-        for (IdeaPluginDescriptor descriptor : descriptors) {
+        for (PluginNode descriptor : RepositoryHelper.loadPlugins(host, null, myIndicator)) {
           allPlugins.put(descriptor.getPluginId(), descriptor);
         }
       }
@@ -162,13 +179,10 @@ public class PluginInstallOperation {
 
     for (PluginNode node : myPluginsToInstall) {
       if (node.getRepositoryName() == PluginInstaller.UNKNOWN_HOST_MARKER) {
-        IdeaPluginDescriptor descriptor = allPlugins.get(node.getPluginId());
+        PluginNode descriptor = allPlugins.get(node.getPluginId());
+        node.setRepositoryName(descriptor != null ? descriptor.getRepositoryName() : null);
         if (descriptor != null) {
-          node.setRepositoryName(((PluginNode)descriptor).getRepositoryName());
-          node.setDownloadUrl(((PluginNode)descriptor).getDownloadUrl());
-        }
-        else {
-          node.setRepositoryName(null);
+          node.setDownloadUrl(descriptor.getDownloadUrl());
         }
       }
     }
@@ -198,7 +212,8 @@ public class PluginInstallOperation {
     return result;
   }
 
-  private boolean prepareToInstallWithCallback(PluginNode pluginNode, List<PluginId> pluginIds) throws IOException {
+  private boolean prepareToInstallWithCallback(@NotNull PluginNode pluginNode,
+                                               @NotNull List<PluginId> pluginIds) throws IOException {
     PluginId id = pluginNode.getPluginId();
     ActionCallback localCallback = myLocalInstallCallbacks.remove(id);
 
@@ -222,13 +237,26 @@ public class PluginInstallOperation {
     }
   }
 
-  private boolean prepareToInstall(PluginNode pluginNode, List<PluginId> pluginIds) throws IOException {
-    Ref<IdeaPluginDescriptor> toDisable = checkDependenciesAndReplacements(pluginNode, pluginIds);
-    if (toDisable == null) return false;
+  private boolean prepareToInstall(@NotNull PluginNode pluginNode,
+                                   @NotNull List<PluginId> pluginIds) throws IOException {
+    if (!checkMissingDependencies(pluginNode, pluginIds)) return false;
+    if (!PluginManagerFilters.getInstance().allowInstallingPlugin(pluginNode)) {
+      LOG.warn("The plugin " + pluginNode.getPluginId() + " is not allowed to install for the organization");
+      return false;
+    }
+    IdeaPluginDescriptor toDisable = checkDependenciesAndReplacements(pluginNode);
 
     myShownErrors = false;
 
     PluginDownloader downloader = PluginDownloader.createDownloader(pluginNode, pluginNode.getRepositoryName(), null);
+
+    IdeaPluginDescriptor previousDescriptor = PluginManagerCore.getPlugin(pluginNode.getPluginId());
+    String previousVersion = (previousDescriptor == null) ? null : previousDescriptor.getVersion();
+    PluginManagerUsageCollector.pluginInstallationStarted(
+      pluginNode,
+      downloader.isFromMarketplace() ? InstallationSourceEnum.MARKETPLACE : InstallationSourceEnum.CUSTOM_REPOSITORY,
+      previousVersion
+    );
 
     IdeaPluginDescriptorImpl descriptor = downloader.prepareToInstallAndLoadDescriptor(myIndicator);
     if (descriptor != null) {
@@ -252,8 +280,8 @@ public class PluginInstallOperation {
       }
       myDependant.add(new PluginInstallCallbackData(downloader.getFile().toPath(), descriptor, !allowNoRestart));
       pluginNode.setStatus(PluginNode.Status.DOWNLOADED);
-      if (!toDisable.isNull()) {
-        myPluginEnabler.disablePlugins(Collections.singleton(toDisable.get()));
+      if (toDisable != null) {
+        myPluginEnabler.disablePlugins(Set.of(toDisable));
       }
     }
     else {
@@ -264,174 +292,188 @@ public class PluginInstallOperation {
     return true;
   }
 
-  @Nullable
-  public Ref<IdeaPluginDescriptor> checkDependenciesAndReplacements(IdeaPluginDescriptor pluginNode, @Nullable List<PluginId> pluginIds) {
-    if (!checkMissingDependencies(pluginNode, pluginIds)) return null;
-
-    Ref<IdeaPluginDescriptor> toDisable = Ref.create(null);
+  @Nullable IdeaPluginDescriptor checkDependenciesAndReplacements(@NotNull IdeaPluginDescriptor pluginNode) {
     PluginReplacement pluginReplacement = ContainerUtil.find(PluginReplacement.EP_NAME.getExtensions(),
                                                              r -> r.getNewPluginId().equals(pluginNode.getPluginId().getIdString()));
-    if (pluginReplacement != null) {
-      IdeaPluginDescriptor oldPlugin = PluginManagerCore.getPlugin(pluginReplacement.getOldPluginDescriptor().getPluginId());
-      if (oldPlugin == null) {
-        LOG.warn("Plugin with id '" + pluginReplacement.getOldPluginDescriptor().getPluginId() + "' not found");
-      }
-      else if (!myPluginEnabler.isDisabled(oldPlugin.getPluginId())) {
-        ApplicationManager.getApplication().invokeAndWait(() -> {
-          String title = IdeBundle.message("plugin.manager.obsolete.plugins.detected.title");
-          String message = pluginReplacement.getReplacementMessage(oldPlugin, pluginNode);
-          if (Messages
-                .showYesNoDialog(message, title, IdeBundle.message("button.disable"), Messages.getNoButton(), Messages.getWarningIcon()) ==
-              Messages.YES) {
-            toDisable.set(oldPlugin);
-          }
-        }, ModalityState.any());
-      }
+    if (pluginReplacement == null) {
+      return null;
     }
-    return toDisable;
+
+    PluginId oldPluginId = pluginReplacement.getOldPluginDescriptor().getPluginId();
+    IdeaPluginDescriptor oldPlugin = PluginManagerCore.getPlugin(oldPluginId);
+    if (oldPlugin == null) {
+      LOG.warn("Plugin with id '" + oldPluginId + "' not found");
+      return null;
+    }
+
+    if (myPluginEnabler.isDisabled(oldPlugin.getPluginId())) {
+      return null;
+    }
+
+    AtomicBoolean toDisable = new AtomicBoolean();
+    ApplicationManager.getApplication().invokeAndWait(() -> {
+      boolean choice = MessageDialogBuilder.yesNo(pluginReplacement.getReplacementMessage(oldPlugin, pluginNode),
+                                                  IdeBundle.message("plugin.manager.obsolete.plugins.detected.title"))
+        .yesText(IdeBundle.message("plugins.configurable.disable")).noText(Messages.getNoButton()).icon(Messages.getWarningIcon())
+        .guessWindowAndAsk();
+      toDisable.set(choice);
+    }, ModalityState.any());
+
+    return toDisable.get() ? oldPlugin : null;
   }
 
-  private boolean checkMissingDependencies(IdeaPluginDescriptor pluginNode, @Nullable List<PluginId> pluginIds) {
+  boolean checkMissingDependencies(@NotNull IdeaPluginDescriptor pluginNode,
+                                   @Nullable List<PluginId> pluginIds) {
     // check for dependent plugins at first.
     List<IdeaPluginDependency> dependencies = pluginNode.getDependencies();
-    if (!dependencies.isEmpty()) {
-      // prepare plugins list for install
-      final List<PluginNode> depends = new ArrayList<>();
-      final List<PluginNode> optionalDeps = new ArrayList<>();
-      for (IdeaPluginDependency dependency : dependencies) {
-        PluginId depPluginId = dependency.getPluginId();
+    if (dependencies.isEmpty()) {
+      return true;
+    }
 
-        if (PluginManagerCore.isModuleDependency(depPluginId)) {
-          PluginId pluginIdByModule = PluginModulesHelper.getInstance().getMarketplacePluginIdByModule(depPluginId);
-          if (pluginIdByModule == null) continue;
-          depPluginId = pluginIdByModule;
-        }
-        if (PluginManagerCore.isPluginInstalled(depPluginId) ||
-            InstalledPluginsState.getInstance().wasInstalled(depPluginId) ||
-            InstalledPluginsState.getInstance().wasInstalledWithoutRestart(depPluginId) ||
-            pluginIds != null && pluginIds.contains(depPluginId)) {
-          // ignore installed or installing plugins
-          continue;
-        }
+    // prepare plugins list for install
+    final List<PluginNode> depends = new ArrayList<>();
+    final List<PluginNode> optionalDeps = new ArrayList<>();
+    for (IdeaPluginDependency dependency : dependencies) {
+      PluginId depPluginId = dependency.getPluginId();
 
-        IdeaPluginDescriptor depPluginDescriptor = findPluginInRepo(depPluginId);
-        PluginNode depPlugin;
-        if (depPluginDescriptor instanceof PluginNode) {
-          depPlugin = (PluginNode)depPluginDescriptor;
-        }
-        else {
-          depPlugin = new PluginNode(depPluginId, depPluginId.getIdString(), "-1");
-        }
+      if (PluginManagerCore.isModuleDependency(depPluginId)) {
+        IdeaPluginDescriptorImpl descriptorByModule = PluginManagerCore.findPluginByModuleDependency(depPluginId);
+        PluginId pluginIdByModule = descriptorByModule != null ?
+                                    descriptorByModule.getPluginId() :
+                                    getCachedPluginId(depPluginId.getIdString());
 
-        if (depPluginDescriptor != null) {
-          if (dependency.isOptional()) {
-            optionalDeps.add(depPlugin);
-          }
-          else {
-            depends.add(depPlugin);
-          }
-        }
+        if (pluginIdByModule == null) continue;
+        depPluginId = pluginIdByModule;
+      }
+      if (PluginManagerCore.isPluginInstalled(depPluginId) ||
+          InstalledPluginsState.getInstance().wasInstalled(depPluginId) ||
+          InstalledPluginsState.getInstance().wasInstalledWithoutRestart(depPluginId) ||
+          pluginIds != null && pluginIds.contains(depPluginId)) {
+        // ignore installed or installing plugins
+        continue;
       }
 
-      if (!prepareDependencies(pluginNode, depends, "plugin.manager.dependencies.detected.title",
-                               "plugin.manager.dependencies.detected.message")) {
-        return false;
-      }
-
-      if (Registry.is("ide.plugins.suggest.install.optional.dependencies")) {
-        if (!prepareDependencies(pluginNode, optionalDeps, "plugin.manager.optional.dependencies.detected.title",
-                                 "plugin.manager.optional.dependencies.detected.message")) {
-          return false;
-        }
+      PluginNode depPluginDescriptor = findPluginInRepo(depPluginId);
+      if (depPluginDescriptor != null) {
+        (dependency.isOptional() ? optionalDeps : depends).add(depPluginDescriptor);
       }
     }
-    return true;
+
+    if (!prepareDependencies(pluginNode, depends, "plugin.manager.dependencies.detected.title",
+                             "plugin.manager.dependencies.detected.message")) {
+      return false;
+    }
+
+    return !Registry.is("ide.plugins.suggest.install.optional.dependencies") ||
+           prepareDependencies(pluginNode, optionalDeps, "plugin.manager.optional.dependencies.detected.title",
+                               "plugin.manager.optional.dependencies.detected.message");
   }
 
   private boolean prepareDependencies(@NotNull IdeaPluginDescriptor pluginNode,
-                                      @NotNull List<PluginNode> depends,
-                                      @NotNull String titleKey,
-                                      @NotNull String messageKey) {
-    if (depends.isEmpty()) {
+                                      @NotNull List<PluginNode> dependencies,
+                                      @NotNull @NonNls String titleKey,
+                                      @NotNull @NonNls String messageKey) {
+    if (dependencies.isEmpty()) {
       return true;
     }
-    final boolean[] proceed = new boolean[1];
+
     try {
+      final boolean[] result = new boolean[1];
       ApplicationManager.getApplication().invokeAndWait(() -> {
         synchronized (ourInstallLock) {
-          List<PluginNode> dependsToShow = new ArrayList<>();
-          for (Iterator<PluginNode> I = depends.iterator(); I.hasNext(); ) {
-            PluginNode node = I.next();
-            PluginId id = node.getPluginId();
-            ActionCallback callback = ourInstallCallbacks.get(id);
+          InstalledPluginsState pluginsState = InstalledPluginsState.getInstance();
+          Set<PluginId> dependenciesToShow = new LinkedHashSet<>();
+          for (Iterator<PluginNode> iterator = dependencies.iterator(); iterator.hasNext(); ) {
+            PluginId pluginId = iterator.next().getPluginId();
+            ActionCallback callback = ourInstallCallbacks.get(pluginId);
             if (callback == null || callback.isRejected()) {
-              if (InstalledPluginsState.getInstance().wasInstalled(id) ||
-                  InstalledPluginsState.getInstance().wasInstalledWithoutRestart(id)) {
-                I.remove();
+              if (pluginsState.wasInstalled(pluginId) || pluginsState.wasInstalledWithoutRestart(pluginId)) {
+                iterator.remove();
                 continue;
               }
-              dependsToShow.add(node);
+              dependenciesToShow.add(pluginId);
             }
             else {
-              myLocalWaitInstallCallbacks.put(id, callback);
+              myLocalWaitInstallCallbacks.put(pluginId, callback);
             }
           }
-          if (dependsToShow.isEmpty()) {
-            proceed[0] = true;
+
+          if (dependenciesToShow.isEmpty()) {
+            result[0] = true;
             return;
           }
 
-          String title = IdeBundle.message(titleKey);
-          String deps = getPluginsText(depends);
-          String message = IdeBundle.message(messageKey, pluginNode.getName(), deps);
-          proceed[0] = Messages.showYesNoDialog(message, title, IdeBundle.message("button.install"), Messages.getNoButton(),
-                                                Messages.getWarningIcon()) == Messages.YES;
+          String deps = getPluginsText(dependencies);
+          int dialogResult =
+            Messages.showYesNoDialog(IdeBundle.message(messageKey, pluginNode.getName(), deps),
+                                     IdeBundle.message(titleKey),
+                                     IdeBundle.message("plugins.configurable.install"),
+                                     Messages.getNoButton(),
+                                     Messages.getWarningIcon());
 
-          if (proceed[0]) {
-            for (PluginNode depend : dependsToShow) {
-              createInstallCallback(depend.getPluginId());
+          result[0] = dialogResult == Messages.YES;
+          if (result[0]) {
+            for (PluginId dependency : dependenciesToShow) {
+              createInstallCallback(dependency);
             }
           }
         }
       }, ModalityState.any());
+
+      return dependencies.isEmpty() ||
+             result[0] && prepareToInstall(dependencies);
     }
     catch (Exception e) {
       return false;
     }
-    if (depends.isEmpty()) {
-      return true;
-    }
-    return proceed[0] && prepareToInstall(depends);
   }
 
-  @NotNull
-  private static String getPluginsText(@NotNull List<PluginNode> pluginNodes) {
-    int size = pluginNodes.size();
+  private static @NotNull @Nls String getPluginsText(@NotNull List<PluginNode> nodes) {
+    List<String> pluginNames = ContainerUtil.map(nodes,
+                                                 node -> StringUtil.wrapWithDoubleQuote(node.getName()));
+
+    int size = pluginNames.size();
     if (size == 1) {
-      return "\"" + pluginNodes.get(0).getName() + "\" plugin";
+      return pluginNames.get(0) + " plugin";
     }
-    return StringUtil.join(pluginNodes.subList(0, size - 1), node -> "\"" + node.getName() + "\"", ", ") +
-           " and \"" + pluginNodes.get(size - 1) + "\" plugins";
+    StringBuilder builder = new StringBuilder();
+    StringUtil.join(pluginNames.subList(0, size - 1),
+                    ", ",
+                    builder);
+    return builder.append(" and ")
+      .append(pluginNames.get(size - 1))
+      .append(" plugins")
+      .toString();
   }
 
   /**
    * Searches for plugin with id 'depPluginId' in custom repos and Marketplace and then takes one with bigger version number
    */
-  @Nullable
-  private IdeaPluginDescriptor findPluginInRepo(PluginId depPluginId) {
-    IdeaPluginDescriptor pluginFromCustomRepos =
-      myCustomReposPlugins.stream().parallel().filter(p -> p.getPluginId().equals(depPluginId)).findAny().orElse(null);
-    PluginNode pluginFromMarketplace = MarketplaceRequests.getInstance().getLastCompatiblePluginUpdate(depPluginId.getIdString());
-    if (pluginFromCustomRepos == null) {
-      return pluginFromMarketplace;
+  private @Nullable PluginNode findPluginInRepo(@NotNull PluginId depPluginId) {
+    PluginNode pluginFromCustomRepos = myCustomReposPlugins.stream()
+      .parallel()
+      .filter(p -> p.getPluginId().equals(depPluginId))
+      .findAny()
+      .orElse(null);
+
+    PluginNode pluginFromMarketplace = MarketplaceRequests.getInstance()
+      .getLastCompatiblePluginUpdate(depPluginId);
+
+    boolean fromCustomRepos = pluginFromMarketplace == null ||
+                              pluginFromCustomRepos != null &&
+                              PluginDownloader.compareVersionsSkipBrokenAndIncompatible(pluginFromCustomRepos.getVersion(),
+                                                                                        pluginFromMarketplace) > 0;
+    return fromCustomRepos ? pluginFromCustomRepos : pluginFromMarketplace;
+  }
+
+  private static @Nullable PluginId getCachedPluginId(@NotNull String pluginId) {
+    Optional<PluginId> cachedModule = ourCache.getIfPresent(pluginId);
+    if (cachedModule != null && cachedModule.isPresent()) {
+      return cachedModule.get();
     }
-    if (pluginFromMarketplace == null) {
-      return pluginFromCustomRepos;
-    }
-    if (PluginDownloader.compareVersionsSkipBrokenAndIncompatible(pluginFromCustomRepos.getVersion(), pluginFromMarketplace) > 0) {
-      return pluginFromCustomRepos;
-    } else {
-      return pluginFromMarketplace;
-    }
+
+    PluginId result = MarketplaceRequests.getInstance().getCompatibleUpdateByModule(pluginId);
+    ourCache.put(pluginId, Optional.ofNullable(result));
+    return result;
   }
 }
