@@ -1,4 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.plugins.newui;
 
 import com.intellij.externalDependencies.DependencyOnPlugin;
@@ -11,20 +11,23 @@ import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.application.ModalityState;
 import com.intellij.openapi.application.ex.ApplicationInfoEx;
 import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.extensions.PluginDescriptor;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.options.Configurable;
 import com.intellij.openapi.options.ConfigurationException;
 import com.intellij.openapi.options.newEditor.SettingsDialog;
 import com.intellij.openapi.progress.ProcessCanceledException;
+import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.progress.ProgressManager;
+import com.intellij.openapi.progress.Task;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.DialogWrapper;
-import com.intellij.openapi.ui.MessageDialogBuilder;
 import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.Ref;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.registry.Registry;
+import com.intellij.openapi.util.text.HtmlChunk;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.wm.IdeFrame;
 import com.intellij.openapi.wm.ex.ProgressIndicatorEx;
@@ -44,11 +47,12 @@ import java.util.List;
 import java.util.*;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * @author Alexander Lobas
  */
-public class MyPluginModel extends InstalledPluginsTableModel implements PluginManagerMain.PluginEnabler {
+public class MyPluginModel extends InstalledPluginsTableModel implements PluginEnabler {
   private static final Logger LOG = Logger.getInstance(MyPluginModel.class);
 
   private final List<ListPluginComponent> myInstalledPluginComponents = new ArrayList<>();
@@ -60,8 +64,8 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
   private PluginsGroup myDownloaded;
   private PluginsGroup myInstalling;
   private Configurable.TopComponentController myTopController;
-  private List<String> myVendorsSorted;
-  private List<String> myTagsSorted;
+  private SortedSet<String> myVendors;
+  private SortedSet<String> myTags;
 
   private static final Set<IdeaPluginDescriptor> myInstallingPlugins = new HashSet<>();
   private static final Set<IdeaPluginDescriptor> myInstallingWithUpdatesPlugins = new HashSet<>();
@@ -72,7 +76,7 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
   private boolean myInstallsRequiringRestart;
   private final List<PluginDetailsPageComponent> myDetailPanels = new ArrayList<>();
 
-  private StatusBarEx myStatusBar;
+  private final @Nullable StatusBarEx myStatusBar;
 
   private PluginUpdatesService myPluginUpdatesService;
 
@@ -83,6 +87,7 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
   private final Set<IdeaPluginDescriptorImpl> myDynamicPluginsToUninstall = new HashSet<>();
   private final Set<IdeaPluginDescriptorImpl> myPluginsToRemoveOnCancel = new HashSet<>();
 
+  private final Map<PluginId, Set<PluginId>> myDependentToRequiredListMap = new HashMap<>();
   private final Map<IdeaPluginDescriptor, Pair<PluginEnableDisableAction, PluginEnabledState>> myDiff = new HashMap<>();
   private final Map<PluginId, Boolean> myRequiredPluginsForProject = new HashMap<>();
   private final Map<IdeaPluginDescriptorImpl, Boolean> myRequiresRestart = new HashMap<>();
@@ -94,18 +99,18 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     super(project);
 
     Window window = ProjectUtil.getActiveFrameOrWelcomeScreen();
-    myStatusBar = getStatusBar(window);
-    if (myStatusBar == null && window != null) {
-      myStatusBar = getStatusBar(window.getOwner());
-    }
+    StatusBarEx statusBar = getStatusBar(window);
+    myStatusBar = statusBar != null || window == null ?
+                  statusBar :
+                  getStatusBar(window.getOwner());
+
+    updatePluginDependencies(null);
   }
 
-  @Nullable
-  private static StatusBarEx getStatusBar(@Nullable Window frame) {
-    if (frame instanceof IdeFrame && !(frame instanceof WelcomeFrame)) {
-      return (StatusBarEx)((IdeFrame)frame).getStatusBar();
-    }
-    return null;
+  private static @Nullable StatusBarEx getStatusBar(@Nullable Window frame) {
+    return frame instanceof IdeFrame && !(frame instanceof WelcomeFrame) ?
+           (StatusBarEx)((IdeFrame)frame).getStatusBar() :
+           null;
   }
 
   public boolean isModified() {
@@ -119,33 +124,10 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
   /**
    * @return true if changes were applied without restart
    */
-  public boolean apply(JComponent parent) throws ConfigurationException {
-    List<String> dependencies = new ArrayList<>();
-
-    updatePluginDependencies();
-    for (Map.Entry<PluginId, Set<PluginId>> entry : getDependentToRequiredListMap().entrySet()) {
-      PluginId id = entry.getKey();
-
-      if (!isLoaded(id)) {
-        continue;
-      }
-
-      for (PluginId dependId : entry.getValue()) {
-        if (!PluginManagerCore.isModuleDependency(dependId)) {
-          IdeaPluginDescriptor descriptor = PluginManagerCore.getPlugin(id);
-          if (!(descriptor instanceof IdeaPluginDescriptorImpl) ||
-              !((IdeaPluginDescriptorImpl)descriptor).isDeleted() && !descriptor.isImplementationDetail()) {
-            dependencies.add("\"" + (descriptor == null ? id.getIdString() : descriptor.getName()) + "\"");
-          }
-          break;
-        }
-      }
-    }
-
-    if (!dependencies.isEmpty()) {
-      throw new ConfigurationException(XmlStringUtil.wrapInHtml(
-        IdeBundle.message("dialog.message.unable.to.apply.changes", dependencies.size(), StringUtil.join(dependencies, ", "))));
-    }
+  public boolean apply(@Nullable JComponent parent) throws ConfigurationException {
+    Map<PluginId, IdeaPluginDescriptorImpl> pluginIdMap = PluginManagerCore.buildPluginIdMap();
+    updatePluginDependencies(pluginIdMap);
+    assertCanApply(pluginIdMap);
 
     Set<PluginId> uninstallsRequiringRestart = new HashSet<>();
     for (IdeaPluginDescriptorImpl pluginDescriptor : myDynamicPluginsToUninstall) {
@@ -159,8 +141,7 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
         getEnabledMap().remove(pluginId);
       }
 
-      ProjectPluginTrackerManager
-        .getInstance()
+      ProjectPluginTrackerManager.getInstance()
         .getState()
         .stopTracking(List.of(pluginId));
     }
@@ -172,7 +153,8 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
       PluginId pluginId = pendingPluginInstall.getPluginDescriptor().getPluginId();
       if (!uninstallsRequiringRestart.contains(pluginId)) {
         InstalledPluginsState.getInstance().trackPluginInstallation(() -> {
-          if (!PluginInstaller.installAndLoadDynamicPlugin(pendingPluginInstall.getFile(), parent,
+          if (!PluginInstaller.installAndLoadDynamicPlugin(pendingPluginInstall.getFile(),
+                                                           parent,
                                                            pendingPluginInstall.getPluginDescriptor())) {
             dynamicPluginsRequiringRestart.add(pluginId);
           }
@@ -228,14 +210,15 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
       IdeaPluginDescriptor descriptor = entry.getKey();
       PluginId pluginId = descriptor.getPluginId();
 
-      if (descriptor.isImplementationDetail() || /* implementation detail plugins are never explicitly disabled */
-          !isLoaded(pluginId) /* if enableMap contains null for id => enable/disable checkbox don't touch */) {
-        continue;
-      }
-
       Pair<PluginEnableDisableAction, PluginEnabledState> pair = entry.getValue();
       PluginEnabledState oldState = pair.getSecond();
       PluginEnabledState newState = getState(pluginId);
+
+      if (isDeleted(descriptor) ||
+          (isHiddenImplementationDetail(descriptor) && newState.isDisabled()) ||
+          !isLoaded(pluginId) /* if enableMap contains null for id => enable/disable checkbox don't touch */) {
+        continue;
+      }
 
       if (oldState != newState ||
           newState.isDisabled() && myErrorPluginsToDisable.contains(pluginId)) {
@@ -248,7 +231,10 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     boolean result = true;
     ProjectPluginTrackerManager pluginTrackerManager = ProjectPluginTrackerManager.getInstance();
     for (Map.Entry<PluginEnableDisableAction, List<IdeaPluginDescriptor>> entry : descriptorsByAction.entrySet()) {
-      if (!pluginTrackerManager.updatePluginsState(entry.getValue(), entry.getKey(), getProject(), parentComponent)) {
+      if (!pluginTrackerManager.updatePluginsState(entry.getValue(),
+                                                   entry.getKey(),
+                                                   getProject(),
+                                                   parentComponent)) {
         result = false;
       }
     }
@@ -343,16 +329,17 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
                              @NotNull IdeaPluginDescriptor descriptor,
                              @Nullable IdeaPluginDescriptor updateDescriptor,
                              @NotNull ModalityState modalityState) {
-    IdeaPluginDescriptor actionDescriptor = updateDescriptor == null ? descriptor : updateDescriptor;
-    if (!PluginManagerMain.checkThirdPartyPluginsAllowed(Collections.singletonList(actionDescriptor))) {
+    boolean isUpdate = updateDescriptor != null;
+    IdeaPluginDescriptor actionDescriptor = isUpdate ? updateDescriptor : descriptor;
+    if (!PluginManagerMain.checkThirdPartyPluginsAllowed(List.of(actionDescriptor))) {
       return;
     }
 
-    boolean allowUninstallWithoutRestart = true;
-    if (updateDescriptor != null) {
-      IdeaPluginDescriptorImpl installedPluginDescriptor = PluginDescriptorLoader.tryLoadFullDescriptor((IdeaPluginDescriptorImpl) descriptor);
-      if (installedPluginDescriptor == null || !DynamicPlugins.allowLoadUnloadWithoutRestart(installedPluginDescriptor)) {
-        allowUninstallWithoutRestart = false;
+    Ref<Boolean> allowInstallWithoutRestart = Ref.create(true);
+    if (isUpdate) {
+      IdeaPluginDescriptorImpl installedPluginDescriptor = (IdeaPluginDescriptorImpl)descriptor;
+      if (!DynamicPlugins.allowLoadUnloadWithoutRestart(installedPluginDescriptor)) {
+        allowInstallWithoutRestart.set(false);
       }
       else if (!installedPluginDescriptor.isEnabled()) {
         try {
@@ -363,123 +350,152 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
         }
       }
       else if (DynamicPlugins.allowLoadUnloadSynchronously(installedPluginDescriptor)) {
-        if (!PluginInstaller.uninstallDynamicPlugin(parentComponent, installedPluginDescriptor, true)) {
-          allowUninstallWithoutRestart = false;
-        }
+        allowInstallWithoutRestart.set(PluginInstaller.uninstallDynamicPlugin(parentComponent,
+                                                                              installedPluginDescriptor,
+                                                                              true));
       }
       else {
         performUninstall(installedPluginDescriptor);
       }
     }
 
-    PluginNode pluginNode;
-    if (actionDescriptor instanceof PluginNode) {
-      pluginNode = (PluginNode)actionDescriptor;
-      if (!pluginNode.detailsLoaded()) {
-        Ref<PluginNode> fullNode = new Ref<>();
-        if (!ProgressManager.getInstance().runProcessWithProgressSynchronously(
-            () -> fullNode.set(MarketplaceRequests.getInstance().loadPluginDetails(((PluginNode) actionDescriptor))),
-            IdeBundle.message("progress.title.loading.plugin.details"), true, null, parentComponent)
-        ) {
-          return;
+    ProgressManager.getInstance()
+      .runProcessWithProgressAsynchronously(new Task.Backgroundable(getProject(),
+                                                                    parentComponent,
+                                                                    IdeBundle.message("progress.title.loading.plugin.details"),
+                                                                    true,
+                                                                    null) {
+        @Override
+        public void run(@NotNull ProgressIndicator indicator) {
+          PluginNode pluginNode = toPluginNode(actionDescriptor, indicator);
+          if (pluginNode == null) {
+            return;
+          }
+
+          List<PluginNode> pluginsToInstall = List.of(pluginNode);
+          ApplicationManager.getApplication().invokeAndWait(() -> {
+            PluginManagerMain.suggestToEnableInstalledDependantPlugins(MyPluginModel.this,
+                                                                       pluginsToInstall);
+          }, modalityState);
+
+
+          InstallPluginInfo info = new InstallPluginInfo((BgProgressIndicator)indicator,
+                                                         descriptor,
+                                                         MyPluginModel.this,
+                                                         !isUpdate);
+          ApplicationManager.getApplication().invokeLater(() -> prepareToInstall(info), modalityState);
+
+          PluginInstallOperation operation = new PluginInstallOperation(pluginsToInstall,
+                                                                        getCustomRepoPlugins(),
+                                                                        MyPluginModel.this,
+                                                                        indicator);
+          operation.setAllowInstallWithoutRestart(allowInstallWithoutRestart.get());
+
+          runInstallOperation(operation, info, modalityState);
         }
-        pluginNode = fullNode.get();
-      }
-    }
-    else {
-      pluginNode = new PluginNode(actionDescriptor.getPluginId(), actionDescriptor.getName(), "-1");
-      pluginNode.setDependencies(actionDescriptor.getDependencies());
-      pluginNode.setRepositoryName(PluginInstaller.UNKNOWN_HOST_MARKER);
-    }
-    List<PluginNode> pluginsToInstall = ContainerUtil.newArrayList(pluginNode);
 
-    PluginManagerMain.suggestToEnableInstalledDependantPlugins(this, pluginsToInstall);
-
-    installPlugin(pluginsToInstall, prepareToInstall(descriptor, updateDescriptor), allowUninstallWithoutRestart, modalityState);
-  }
-
-  private void installPlugin(@NotNull List<PluginNode> pluginsToInstall,
-                             @NotNull InstallPluginInfo info,
-                             boolean allowInstallWithoutRestart,
-                             @NotNull ModalityState modalityState) {
-    ApplicationManager.getApplication().executeOnPooledThread(() -> {
-      boolean cancel = false;
-      boolean error = false;
-      boolean showErrors = true;
-      boolean restartRequired = true;
-      List<PendingDynamicPluginInstall> pluginsToInstallSynchronously = new ArrayList<>();
-      try {
-        PluginInstallOperation operation = new PluginInstallOperation(pluginsToInstall, getCustomRepoPlugins(), this, info.indicator);
-        operation.setAllowInstallWithoutRestart(allowInstallWithoutRestart);
-        operation.run();
-        for (PendingDynamicPluginInstall install : operation.getPendingDynamicPluginInstalls()) {
-          if (DynamicPlugins.allowLoadUnloadSynchronously(install.getPluginDescriptor())) {
-            pluginsToInstallSynchronously.add(install);
-            myPluginsToRemoveOnCancel.add(install.getPluginDescriptor());
+        private @Nullable PluginNode toPluginNode(@NotNull IdeaPluginDescriptor descriptor,
+                                                  @NotNull ProgressIndicator indicator) {
+          if (descriptor instanceof PluginNode) {
+            PluginNode pluginNode = (PluginNode)descriptor;
+            return pluginNode.detailsLoaded() ?
+                   pluginNode :
+                   MarketplaceRequests.getInstance().loadPluginDetails(pluginNode, indicator);
           }
           else {
-            myDynamicPluginsToInstall.put(install.getPluginDescriptor().getPluginId(), install);
+            PluginNode pluginNode = new PluginNode(descriptor.getPluginId(),
+                                                   descriptor.getName(),
+                                                   "-1");
+            pluginNode.setDependencies(descriptor.getDependencies());
+            pluginNode.setRepositoryName(PluginInstaller.UNKNOWN_HOST_MARKER);
+            return pluginNode;
           }
         }
+      }, new BgProgressIndicator());
+  }
 
-        error = !operation.isSuccess();
-        showErrors = !operation.isShownErrors();
-        restartRequired = operation.isRestartRequired();
-      }
-      catch (ProcessCanceledException e) {
-        cancel = true;
-      }
-      catch (Throwable e) {
-        LOG.error(e);
-        error = true;
+  private void runInstallOperation(@NotNull PluginInstallOperation operation,
+                                   @NotNull InstallPluginInfo info,
+                                   @NotNull ModalityState modalityState) {
+    boolean cancel = false;
+    boolean success = true;
+    boolean showErrors = true;
+    boolean restartRequired = true;
+    List<PendingDynamicPluginInstall> pluginsToInstallSynchronously = new ArrayList<>();
+    try {
+      operation.run();
+      for (PendingDynamicPluginInstall install : operation.getPendingDynamicPluginInstalls()) {
+        if (DynamicPlugins.allowLoadUnloadSynchronously(install.getPluginDescriptor())) {
+          pluginsToInstallSynchronously.add(install);
+          myPluginsToRemoveOnCancel.add(install.getPluginDescriptor());
+        }
+        else {
+          myDynamicPluginsToInstall.put(install.getPluginDescriptor().getPluginId(), install);
+        }
       }
 
-      boolean success = !error;
-      boolean _cancel = cancel;
-      boolean _showErrors = showErrors;
-      boolean finalRestartRequired = restartRequired;
-      ApplicationManager.getApplication()
-        .invokeLater(() -> {
-          boolean dynamicRestartRequired = false;
-          for (PendingDynamicPluginInstall install : pluginsToInstallSynchronously) {
-            boolean installedWithoutRestart = PluginInstaller.installAndLoadDynamicPlugin(install.getFile(), myInstalledPanel, install.getPluginDescriptor());
-            if (installedWithoutRestart) {
-              IdeaPluginDescriptor installedDescriptor = PluginManagerCore.getPlugin(info.getDescriptor().getPluginId());
-              if (installedDescriptor != null) {
-                info.setInstalledDescriptor((IdeaPluginDescriptorImpl)installedDescriptor);
-              }
-            }
-            else {
-              dynamicRestartRequired = true;
-            }
+      success = operation.isSuccess();
+      showErrors = !operation.isShownErrors();
+      restartRequired = operation.isRestartRequired();
+    }
+    catch (ProcessCanceledException e) {
+      cancel = true;
+    }
+    catch (Throwable e) {
+      LOG.error(e);
+      success = false;
+    }
+
+    boolean _success = success;
+    boolean _cancel = cancel;
+    boolean _showErrors = showErrors;
+    boolean _restartRequired = restartRequired;
+    ApplicationManager.getApplication().invokeLater(() -> {
+      boolean dynamicRestartRequired = false;
+      for (PendingDynamicPluginInstall install : pluginsToInstallSynchronously) {
+        boolean installedWithoutRestart = PluginInstaller.installAndLoadDynamicPlugin(install.getFile(),
+                                                                                      myInstalledPanel,
+                                                                                      install.getPluginDescriptor());
+        if (installedWithoutRestart) {
+          IdeaPluginDescriptor installedDescriptor = PluginManagerCore.getPlugin(info.getDescriptor().getPluginId());
+          if (installedDescriptor != null) {
+            info.setInstalledDescriptor((IdeaPluginDescriptorImpl)installedDescriptor);
           }
-          info.finish(success, _cancel, _showErrors, finalRestartRequired || dynamicRestartRequired);
-        }, modalityState);
-    });
+        }
+        else {
+          dynamicRestartRequired = true;
+        }
+      }
+      info.finish(_success, _cancel, _showErrors, _restartRequired || dynamicRestartRequired);
+    }, modalityState);
   }
 
   public boolean toBackground() {
     for (InstallPluginInfo info : myInstallingInfos.values()) {
       info.toBackground(myStatusBar);
     }
-    return !myInstallingInfos.isEmpty();
+
+    boolean result = !myInstallingInfos.isEmpty();
+    if (result) {
+      InstallPluginInfo.showRestart();
+    }
+    return result;
   }
 
-  @NotNull
-  private InstallPluginInfo prepareToInstall(@NotNull IdeaPluginDescriptor descriptor, @Nullable IdeaPluginDescriptor updateDescriptor) {
-    boolean install = updateDescriptor == null;
-    InstallPluginInfo info = new InstallPluginInfo(descriptor, updateDescriptor, this, install);
-    myInstallingInfos.put(descriptor.getPluginId(), info);
+  private void prepareToInstall(@NotNull InstallPluginInfo info) {
+    IdeaPluginDescriptor descriptor = info.getDescriptor();
+    PluginId pluginId = descriptor.getPluginId();
+    myInstallingInfos.put(pluginId, info);
 
     if (myInstallingWithUpdatesPlugins.isEmpty()) {
       myTopController.showProgress(true);
     }
     myInstallingWithUpdatesPlugins.add(descriptor);
-    if (install) {
+    if (info.install) {
       myInstallingPlugins.add(descriptor);
     }
 
-    if (install && myInstalling != null) {
+    if (info.install && myInstalling != null) {
       if (myInstalling.ui == null) {
         myInstalling.descriptors.add(descriptor);
         myInstalledPanel.addGroup(myInstalling, 0);
@@ -492,13 +508,13 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
       myInstalledPanel.doLayout();
     }
 
-    List<ListPluginComponent> gridComponents = myMarketplacePluginComponentMap.get(descriptor.getPluginId());
+    List<ListPluginComponent> gridComponents = myMarketplacePluginComponentMap.get(pluginId);
     if (gridComponents != null) {
       for (ListPluginComponent gridComponent : gridComponents) {
         gridComponent.showProgress();
       }
     }
-    List<ListPluginComponent> listComponents = myInstalledPluginComponentMap.get(descriptor.getPluginId());
+    List<ListPluginComponent> listComponents = myInstalledPluginComponentMap.get(pluginId);
     if (listComponents != null) {
       for (ListPluginComponent listComponent : listComponents) {
         listComponent.showProgress();
@@ -509,8 +525,6 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
         panel.showProgress();
       }
     }
-
-    return info;
   }
 
   /**
@@ -701,8 +715,8 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
       return;
     }
 
-    myVendorsSorted = null;
-    myTagsSorted = null;
+    myVendors = null;
+    myTags = null;
 
     if (myDownloaded.ui == null) {
       myDownloaded.descriptors.add(descriptor);
@@ -729,30 +743,30 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     }
   }
 
-  @NotNull
-  public List<String> getVendors() {
-    if (ContainerUtil.isEmpty(myVendorsSorted)) {
-      myVendorsSorted = getVendors(getInstalledDescriptors());
+  public @NotNull SortedSet<String> getVendors() {
+    if (ContainerUtil.isEmpty(myVendors)) {
+      Map<String, Integer> vendorsCount = getVendorsCount(getInstalledDescriptors());
+      myVendors = new TreeSet<>((v1, v2) -> {
+        int result = vendorsCount.get(v2) - vendorsCount.get(v1);
+        return result == 0 ? v2.compareToIgnoreCase(v1) : result;
+      });
+      myVendors.addAll(vendorsCount.keySet());
     }
-    return myVendorsSorted;
+    return Collections.unmodifiableSortedSet(myVendors);
   }
 
-  @NotNull
-  public List<String> getTags() {
-    if (ContainerUtil.isEmpty(myTagsSorted)) {
-      Set<String> allTags = new HashSet<>();
+  public @NotNull SortedSet<String> getTags() {
+    if (ContainerUtil.isEmpty(myTags)) {
+      myTags = new TreeSet<>(String::compareToIgnoreCase);
 
       for (IdeaPluginDescriptor descriptor : getInstalledDescriptors()) {
-        allTags.addAll(PluginManagerConfigurable.getTags(descriptor));
+        myTags.addAll(PluginManagerConfigurable.getTags(descriptor));
       }
-
-      myTagsSorted = ContainerUtil.sorted(allTags, String::compareToIgnoreCase);
     }
-    return myTagsSorted;
+    return Collections.unmodifiableSortedSet(myTags);
   }
 
-  @NotNull
-  public List<IdeaPluginDescriptor> getInstalledDescriptors() {
+  public @NotNull List<IdeaPluginDescriptor> getInstalledDescriptors() {
     assert myInstalledPanel != null;
 
     return myInstalledPanel
@@ -763,27 +777,17 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
       .collect(Collectors.toList());
   }
 
-  @NotNull
-  public static List<String> getVendors(@NotNull Collection<? extends IdeaPluginDescriptor> descriptors) {
+  private static @NotNull Map<String, Integer> getVendorsCount(@NotNull Collection<? extends IdeaPluginDescriptor> descriptors) {
     Map<String, Integer> vendors = new HashMap<>();
 
     for (IdeaPluginDescriptor descriptor : descriptors) {
       String vendor = StringUtil.trim(descriptor.getVendor());
       if (!StringUtil.isEmptyOrSpaces(vendor)) {
-        Integer count = vendors.get(vendor);
-        if (count == null) {
-          vendors.put(vendor, 1);
-        }
-        else {
-          vendors.put(vendor, count + 1);
-        }
+        vendors.compute(vendor, (__, old) -> (old != null ? old : 0) + 1);
       }
     }
 
-    return ContainerUtil.sorted(vendors.keySet(), (v1, v2) -> {
-      int result = vendors.get(v2) - vendors.get(v1);
-      return result == 0 ? v2.compareToIgnoreCase(v1) : result;
-    });
+    return vendors;
   }
 
   public static boolean isVendor(@NotNull IdeaPluginDescriptor descriptor, @NotNull Set<String> vendors) {
@@ -811,11 +815,9 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
 
   @NotNull ProjectDependentPluginEnabledState getProjectDependentState(@NotNull IdeaPluginDescriptor descriptor) {
     PluginId pluginId = descriptor.getPluginId();
-    return new ProjectDependentPluginEnabledState(
-      pluginId,
-      getState(pluginId),
-      getProject()
-    );
+    return new ProjectDependentPluginEnabledState(pluginId,
+                                                  getState(pluginId),
+                                                  getProject());
   }
 
   /**
@@ -829,27 +831,16 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
   boolean isRequiredPluginForProject(@NotNull PluginId pluginId) {
     Project project = getProject();
     return project != null &&
-           myRequiredPluginsForProject.computeIfAbsent(
-             pluginId,
-             id -> ContainerUtil.exists(
-               getDependenciesOnPlugins(project),
-               id.getIdString()::equals
-             )
-           );
+           myRequiredPluginsForProject
+             .computeIfAbsent(pluginId,
+                              id -> ContainerUtil.exists(getDependenciesOnPlugins(project),
+                                                         id.getIdString()::equals));
   }
 
   boolean requiresRestart(@NotNull IdeaPluginDescriptor descriptor) {
-    return myRequiresRestart.computeIfAbsent(
-      descriptor instanceof IdeaPluginDescriptorImpl ? (IdeaPluginDescriptorImpl)descriptor : null,
-      descriptorImpl -> {
-        IdeaPluginDescriptorImpl fullDescriptor = descriptorImpl == null ?
-                                                  null :
-                                                  PluginDescriptorLoader.tryLoadFullDescriptor(descriptorImpl);
-
-        return fullDescriptor == null ||
-               DynamicPlugins.checkCanUnloadWithoutRestart(fullDescriptor) != null;
-      }
-    );
+    return myRequiresRestart
+      .computeIfAbsent(descriptor instanceof IdeaPluginDescriptorImpl ? (IdeaPluginDescriptorImpl)descriptor : null,
+                       it -> it == null || DynamicPlugins.checkCanUnloadWithoutRestart(it) != null);
   }
 
   boolean isUninstalled(@NotNull IdeaPluginDescriptor descriptor) {
@@ -860,39 +851,27 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     myUninstalled.add(descriptor);
   }
 
-  public void changeEnableDisable(@NotNull Set<? extends IdeaPluginDescriptor> plugins,
-                                  @NotNull PluginEnableDisableAction action) {
-    enableRows(plugins, action);
+  @Override
+  public void setEnabledState(@NotNull Collection<? extends IdeaPluginDescriptor> descriptors,
+                              @NotNull PluginEnableDisableAction action) {
+    enableRows(descriptors, action);
     updateAfterEnableDisable();
     runInvalidFixCallback();
   }
 
-  @Override
-  public void enablePlugins(@NotNull Set<? extends IdeaPluginDescriptor> plugins) {
-    changeEnableDisable(plugins, PluginEnableDisableAction.ENABLE_GLOBALLY);
-  }
-
-  @Override
-  public void disablePlugins(@NotNull Set<? extends IdeaPluginDescriptor> plugins) {
-    changeEnableDisable(plugins, PluginEnableDisableAction.DISABLE_GLOBALLY);
-  }
-
   void enableRequiredPlugins(@NotNull IdeaPluginDescriptor descriptor) {
-    Set<PluginId> requiredPluginIds = getRequiredPlugins(descriptor.getPluginId());
-    if (ContainerUtil.isEmpty(requiredPluginIds)) {
+    Set<PluginId> requiredPluginIds = getRequiredPluginIds(descriptor.getPluginId());
+    if (requiredPluginIds.isEmpty()) {
       return;
     }
 
-    List<IdeaPluginDescriptor> allPlugins = getAllPlugins();
     Set<IdeaPluginDescriptor> requiredPlugins = new HashSet<>();
 
     for (PluginId pluginId : requiredPluginIds) {
-      IdeaPluginDescriptor result = ContainerUtil.find(allPlugins, d -> pluginId.equals(d.getPluginId()));
+      IdeaPluginDescriptor result = ContainerUtil.find(view, d -> pluginId.equals(d.getPluginId()));
       if (result == null && PluginManagerCore.isModuleDependency(pluginId)) {
-        result = ContainerUtil.find(
-          allPlugins,
-          d -> d instanceof IdeaPluginDescriptorImpl && ((IdeaPluginDescriptorImpl)d).getModules().contains(pluginId)
-        );
+        result = ContainerUtil.find(view,
+                                    d -> d instanceof IdeaPluginDescriptorImpl && ((IdeaPluginDescriptorImpl)d).modules.contains(pluginId));
         if (result != null) {
           setEnabled(pluginId, PluginEnabledState.ENABLED); // todo
         }
@@ -917,10 +896,8 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     PluginEnabledState newState = pair.getSecond();
     if (oldState != newState) {
       PluginEnabledState state = oldState != null ? oldState : getState(pluginId);
-      myDiff.put(
-        descriptor,
-        Pair.create(pair.getFirst(), state)
-      );
+      myDiff.put(descriptor,
+                 Pair.create(pair.getFirst(), state));
     }
     else {
       myDiff.remove(descriptor);
@@ -987,31 +964,7 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     }
   }
 
-  static boolean showUninstallDialog(@NotNull Component uiParent, @Nullable String singleName, int count) {
-    String message;
-    if (singleName == null) {
-      message = IdeBundle.message("prompt.uninstall.several.plugins", count);
-    }
-    else {
-      message = IdeBundle.message("prompt.uninstall.plugin", singleName);
-    }
-    return MessageDialogBuilder.yesNo(IdeBundle.message("title.plugin.uninstall"), message).ask(uiParent);
-  }
-
-  void uninstallAndUpdateUi(@NotNull Component uiParent, @NotNull IdeaPluginDescriptor descriptor) {
-    List<IdeaPluginDescriptor> deps = dependent(descriptor);
-    if (!deps.isEmpty()) {
-      String listOfDeps = StringUtil.join(deps, plugin -> {
-        return "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;" + plugin.getName();
-      }, "<br>");
-      String message = XmlStringUtil
-        .wrapInHtml(IdeBundle.message("dialog.message.following.plugin.depend.on", deps.size(), descriptor.getName(), listOfDeps));
-      String title = IdeBundle.message("title.plugin.uninstall");
-      if (!MessageDialogBuilder.yesNo(title, message).ask(uiParent)) {
-        return;
-      }
-    }
-
+  void uninstallAndUpdateUi(@NotNull IdeaPluginDescriptor descriptor) {
     boolean needRestartForUninstall = performUninstall((IdeaPluginDescriptorImpl)descriptor);
     needRestart |= descriptor.isEnabled() && needRestartForUninstall;
     myInstallsRequiringRestart |= needRestartForUninstall;
@@ -1034,17 +987,14 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     }
   }
 
-  private boolean performUninstall(IdeaPluginDescriptorImpl descriptorImpl) {
+  private boolean performUninstall(@NotNull IdeaPluginDescriptorImpl descriptorImpl) {
     boolean needRestartForUninstall = true;
     try {
       descriptorImpl.setDeleted(true);
-      // Load descriptor to make sure we get back all the data cleared after the descriptor has been loaded
-      IdeaPluginDescriptorImpl fullDescriptor = PluginDescriptorLoader.tryLoadFullDescriptor(descriptorImpl);
-      LOG.assertTrue(fullDescriptor != null);
-      needRestartForUninstall = PluginInstaller.prepareToUninstall(fullDescriptor);
+      needRestartForUninstall = PluginInstaller.prepareToUninstall(descriptorImpl);
       InstalledPluginsState.getInstance().onPluginUninstall(descriptorImpl, needRestartForUninstall);
       if (!needRestartForUninstall) {
-        myDynamicPluginsToUninstall.add(fullDescriptor);
+        myDynamicPluginsToUninstall.add(descriptorImpl);
       }
     }
     catch (IOException e) {
@@ -1053,118 +1003,206 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
     return needRestartForUninstall;
   }
 
-  @Nullable
-  public static IdeaPluginDescriptor findPlugin(@NotNull PluginId id) {
-    IdeaPluginDescriptor plugin = PluginManagerCore.getPlugin(id);
-    if (plugin == null && PluginManagerCore.isModuleDependency(id)) {
-      IdeaPluginDescriptor descriptor = PluginManagerCore.findPluginByModuleDependency(id);
-      if (descriptor != null) return descriptor;
-    }
-    return plugin;
+  private boolean hasProblematicDependencies(@NotNull PluginId pluginId) {
+    return getRequiredPluginsById(pluginId).anyMatch(pair -> {
+      IdeaPluginDescriptor descriptor = pair.getSecond();
+      return descriptor != null && !isEnabled(descriptor);
+    });
   }
 
-  public boolean hasProblematicDependencies(PluginId pluginId) {
-    Set<PluginId> ids = getDependentToRequiredListMap().get(pluginId);
-    if (ContainerUtil.isEmpty(ids)) {
-      return false;
+  public boolean hasErrors(@NotNull IdeaPluginDescriptor descriptor) {
+    return !getErrors(descriptor).isEmpty();
+  }
+
+  public @NotNull List<? extends HtmlChunk> getErrors(@NotNull IdeaPluginDescriptor descriptor) {
+    PluginId pluginId = descriptor.getPluginId();
+    if (isDeleted(descriptor) ||
+        InstalledPluginsState.getInstance().wasUninstalledWithoutRestart(pluginId) ||
+        InstalledPluginsState.getInstance().wasInstalledWithoutRestart(pluginId)) {
+      // we'll actually install the plugin when the configurable is closed; at this time we don't know if there's any loadingError
+      return List.of();
     }
 
-    for (PluginId id : ids) {
-      IdeaPluginDescriptor plugin = findPlugin(id);
-      if (plugin != null && !isEnabled(plugin)) {
-        return true;
+    PluginLoadingError loadingError = PluginManagerCore.getLoadingError(pluginId);
+    PluginId disabledDependency = loadingError != null ? loadingError.disabledDependency : null;
+    if (disabledDependency == null) {
+      return loadingError != null ?
+             List.of(createTextChunk(loadingError.getShortMessage())) :
+             List.of();
+    }
+
+    Map<PluginId, IdeaPluginDescriptor> requiredPlugins = new HashMap<>();
+    getRequiredPluginsById(pluginId).filter(pair -> {
+      IdeaPluginDescriptor requiredDescriptor = pair.getSecond();
+      return requiredDescriptor == null || !requiredDescriptor.isEnabled();
+    }).forEach(pair -> requiredPlugins.put(pair.getFirst(), pair.getSecond()));
+    if (requiredPlugins.isEmpty()) {
+      return List.of();
+    }
+
+    ArrayList<HtmlChunk> errors = new ArrayList<>();
+
+    Set<String> pluginNamesOrIds = requiredPlugins.entrySet().stream()
+      .map(entry -> getPluginNameOrId(entry.getKey(), entry.getValue()))
+      .collect(Collectors.toUnmodifiableSet());
+    String message = IdeBundle.message("new.plugin.manager.incompatible.deps.tooltip",
+                                       pluginNamesOrIds.size(),
+                                       joinPluginNamesOrIds(pluginNamesOrIds));
+    errors.add(createTextChunk(message));
+
+    //noinspection SSBasedInspection
+    if (requiredPlugins.entrySet().stream().noneMatch(entry -> {
+      IdeaPluginDescriptor requiredDescriptor = entry.getValue();
+      return requiredDescriptor == null || PluginManagerCore.isIncompatible(requiredDescriptor);
+    })) {
+      String action = IdeBundle.message("new.plugin.manager.incompatible.deps.action", requiredPlugins.size());
+      errors.add(HtmlChunk.link("link", action));
+    }
+
+    return Collections.unmodifiableList(errors);
+  }
+
+  @Override
+  protected void updatePluginDependencies(@Nullable Map<PluginId, IdeaPluginDescriptorImpl> pluginIdMap) {
+    myDependentToRequiredListMap.clear();
+
+    InstalledPluginsState pluginsState = InstalledPluginsState.getInstance();
+    for (IdeaPluginDescriptor rootDescriptor : view) {
+      final PluginId pluginId = rootDescriptor.getPluginId();
+      myDependentToRequiredListMap.remove(pluginId);
+      if (isDeleted(rootDescriptor) ||
+          isDisabled(pluginId)) {
+        continue;
       }
-    }
 
-    return false;
-  }
+      if (pluginIdMap == null) {
+        pluginIdMap = PluginManagerCore.buildPluginIdMap();
+      }
 
-  public boolean hasErrors(@NotNull IdeaPluginDescriptor plugin) {
-    return getErrorMessage(plugin, null) != null;
-  }
-
-  @Nullable
-  public @Nls String getErrorMessage(@NotNull IdeaPluginDescriptor pluginDescriptor, @Nullable Ref<? super @Nls String> enableAction) {
-    if (pluginDescriptor instanceof IdeaPluginDescriptorImpl && ((IdeaPluginDescriptorImpl)pluginDescriptor).isDeleted()) {
-      return null;
-    }
-    if (InstalledPluginsState.getInstance().wasUninstalledWithoutRestart(pluginDescriptor.getPluginId())) {
-      return null;
-    }
-    if (InstalledPluginsState.getInstance().wasInstalledWithoutRestart(pluginDescriptor.getPluginId())) {
-      // we'll actually install the plugin when the configurable is closed; at this time we don't know if there's any error
-      return null;
-    }
-
-    String message = PluginManagerCore.getShortLoadingErrorMessage(pluginDescriptor);
-
-    PluginId disabledDependency = PluginManagerCore.getFirstDisabledDependency(pluginDescriptor);
-    if (disabledDependency != null) {
-      Set<PluginId> requiredPlugins = filterRequiredPlugins(getRequiredPlugins(pluginDescriptor.getPluginId()));
-      if (!ContainerUtil.isEmpty(requiredPlugins)) {
-        boolean[] enable = {true};
-        String deps = StringUtil.join(requiredPlugins, id -> {
-          IdeaPluginDescriptor plugin = findPlugin(id);
-          if (enable[0] && (plugin == null || PluginManagerCore.isIncompatible(plugin))) {
-            enable[0] = false;
+      boolean loaded = isLoaded(pluginId);
+      if (rootDescriptor instanceof IdeaPluginDescriptorImpl) {
+        PluginManagerCore.processAllNonOptionalDependencies((IdeaPluginDescriptorImpl)rootDescriptor, pluginIdMap, (depId, __) -> {
+          if (depId.equals(pluginId)) {
+            return FileVisitResult.CONTINUE;
           }
-          return StringUtil.wrapWithDoubleQuote(plugin != null ? plugin.getName() : id.getIdString());
-        }, ", ");
 
-        int size = requiredPlugins.size();
-        message = IdeBundle.message("new.plugin.manager.incompatible.deps.tooltip", size, deps);
-        if (enable[0] && enableAction != null) {
-          enableAction.set(IdeBundle.message("new.plugin.manager.incompatible.deps.action", size));
+          if ((!isLoaded(depId) &&
+               !pluginsState.wasInstalled(depId) &&
+               !pluginsState.wasUpdated(depId) &&
+               !pluginsState.wasInstalledWithoutRestart(depId)) ||
+              isDisabled(depId)) {
+            myDependentToRequiredListMap.putIfAbsent(pluginId, new HashSet<>());
+            myDependentToRequiredListMap.get(pluginId).add(depId);
+          }
+
+          return FileVisitResult.CONTINUE;
+        });
+      }
+
+      if (!loaded &&
+          !myDependentToRequiredListMap.containsKey(pluginId) &&
+          PluginManagerCore.isCompatible(rootDescriptor)) {
+        setEnabled(pluginId, PluginEnabledState.ENABLED); // todo
+      }
+    }
+  }
+
+  private @NotNull Set<PluginId> getRequiredPluginIds(@NotNull PluginId pluginId) {
+    return myDependentToRequiredListMap.getOrDefault(pluginId, Set.of());
+  }
+
+  private void assertCanApply(@NotNull Map<PluginId, IdeaPluginDescriptorImpl> pluginIdMap) throws ConfigurationException {
+    List<IdeaPluginDescriptorImpl> descriptors = new ArrayList<>();
+    for (Map.Entry<PluginId, Set<PluginId>> entry : myDependentToRequiredListMap.entrySet()) {
+      PluginId pluginId = entry.getKey();
+
+      if (!isLoaded(pluginId)) {
+        continue;
+      }
+
+      for (PluginId dependencyPluginId : entry.getValue()) {
+        if (PluginManagerCore.isModuleDependency(dependencyPluginId)) {
+          continue;
         }
-      }
-      else {
-        message = null;
+
+        IdeaPluginDescriptorImpl descriptor = pluginIdMap.get(pluginId);
+        if (descriptor != null && !isHidden(descriptor)) {
+          descriptors.add(descriptor);
+        }
+        break;
       }
     }
 
-    return message;
-  }
-
-  @Nullable
-  private static Set<PluginId> filterRequiredPlugins(@Nullable Set<PluginId> requiredPlugins) {
-    if (ContainerUtil.isEmpty(requiredPlugins)) {
-      return requiredPlugins;
+    if (!descriptors.isEmpty()) {
+      Set<String> pluginNames = getPluginNames(descriptors);
+      String message = IdeBundle.message("dialog.message.unable.to.apply.changes",
+                                         pluginNames.size(),
+                                         joinPluginNamesOrIds(pluginNames));
+      throw new ConfigurationException(XmlStringUtil.wrapInHtml(message));
     }
-    return requiredPlugins.stream().filter(id -> {
-      IdeaPluginDescriptor plugin = findPlugin(id);
-      return plugin == null || !plugin.isEnabled() ;
-    }).collect(Collectors.toSet());
   }
 
-  @NotNull
-  protected Collection<IdeaPluginDescriptor> getCustomRepoPlugins() {
+  private @NotNull Stream<Pair<@NotNull PluginId, @Nullable IdeaPluginDescriptorImpl>> getRequiredPluginsById(@NotNull PluginId pluginId) {
+    Set<PluginId> pluginIds = getRequiredPluginIds(pluginId);
+    if (pluginIds.isEmpty()) {
+      return Stream.of();
+    }
+
+    Map<PluginId, IdeaPluginDescriptorImpl> pluginIdMap = PluginManagerCore.buildPluginIdMap();
+    return pluginIds
+      .stream()
+      .map(requiredPluginId -> {
+        IdeaPluginDescriptorImpl requiredDescriptor = pluginIdMap.get(requiredPluginId);
+        return Pair.create(requiredPluginId, requiredDescriptor == null && PluginManagerCore.isModuleDependency(requiredPluginId) ?
+                                             PluginManagerCore.findPluginByModuleDependency(requiredPluginId) :
+                                             requiredDescriptor);
+      });
+  }
+
+  protected @NotNull Collection<PluginNode> getCustomRepoPlugins() {
     return CustomPluginRepositoryService.getInstance().getCustomRepositoryPlugins();
   }
 
-  @NotNull
-  private List<IdeaPluginDescriptor> dependent(@NotNull IdeaPluginDescriptor rootDescriptor) {
-    ApplicationInfoEx appInfo = ApplicationInfoEx.getInstanceEx();
+  public static @NotNull Set<String> getPluginNames(@NotNull Collection<? extends IdeaPluginDescriptor> descriptors) {
+    return Collections.unmodifiableSet(ContainerUtil.map2Set(descriptors,
+                                                             PluginDescriptor::getName));
+  }
+
+  public static @NotNull String joinPluginNamesOrIds(@NotNull Set<String> pluginNames) {
+    return StringUtil.join(pluginNames,
+                           StringUtil::wrapWithDoubleQuote,
+                           ", ");
+  }
+
+  // todo move from the class
+  public static @NotNull List<IdeaPluginDescriptorImpl> getDependents(@NotNull IdeaPluginDescriptor rootDescriptor,
+                                                                      @NotNull Map<PluginId, IdeaPluginDescriptorImpl> pluginIdMap,
+                                                                      @NotNull ApplicationInfoEx applicationInfo) {
     PluginId rootId = rootDescriptor.getPluginId();
 
-    List<IdeaPluginDescriptor> result = new ArrayList<>();
-    for (IdeaPluginDescriptor plugin : getAllPlugins()) {
-      PluginId pluginId = plugin.getPluginId();
-      if (pluginId == rootId || appInfo.isEssentialPlugin(pluginId) || !plugin.isEnabled() || plugin.isImplementationDetail()) {
-        continue;
-      }
-      if (!(plugin instanceof IdeaPluginDescriptorImpl) || ((IdeaPluginDescriptorImpl)plugin).isDeleted()) {
+    List<IdeaPluginDescriptorImpl> result = new ArrayList<>();
+    for (Map.Entry<PluginId, IdeaPluginDescriptorImpl> entry : pluginIdMap.entrySet()) {
+      PluginId pluginId = entry.getKey();
+      IdeaPluginDescriptorImpl descriptor = entry.getValue();
+
+      if (pluginId.equals(rootId) ||
+          applicationInfo.isEssentialPlugin(pluginId) ||
+          descriptor == null ||
+          !descriptor.isEnabled() ||
+          isHidden(descriptor)) {
         continue;
       }
 
-      PluginManagerCore.processAllDependencies((IdeaPluginDescriptorImpl)plugin, false, PluginManagerCore.buildPluginIdMap(), (id, descriptor) -> {
-        if (id == rootId) {
-          result.add(plugin);
+      PluginManagerCore.processAllNonOptionalDependencies(descriptor, pluginIdMap, dependency -> {
+        if (dependency.getPluginId().equals(rootId)) {
+          result.add(descriptor);
           return FileVisitResult.TERMINATE;
         }
         return FileVisitResult.CONTINUE;
       });
     }
-    return result;
+
+    return Collections.unmodifiableList(result);
   }
 
   private final Map<String, Icon> myIcons = new HashMap<>(); // local cache for PluginLogo WeakValueMap
@@ -1183,9 +1221,11 @@ public class MyPluginModel extends InstalledPluginsTableModel implements PluginM
   }
 
   private static @NotNull List<String> getDependenciesOnPlugins(@NotNull Project project) {
-    return ContainerUtil.map(
-      ExternalDependenciesManager.getInstance(project).getDependencies(DependencyOnPlugin.class),
-      DependencyOnPlugin::getPluginId
-    );
+    return ContainerUtil.map(ExternalDependenciesManager.getInstance(project).getDependencies(DependencyOnPlugin.class),
+                             DependencyOnPlugin::getPluginId);
+  }
+
+  private static @NotNull HtmlChunk.Element createTextChunk(@NotNull @Nls String message) {
+    return HtmlChunk.span().addText(message);
   }
 }
