@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.idea;
 
 import com.intellij.diagnostic.DialogAppender;
@@ -20,21 +20,26 @@ import java.io.StringReader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 public final class LoggerFactory implements Logger.Factory {
   private static final String SYSTEM_MACRO = "$SYSTEM_DIR$";
   private static final String APPLICATION_MACRO = "$APPLICATION_DIR$";
   private static final String LOG_DIR_MACRO = "$LOG_DIR$";
 
+  public static final String LOG_FILE_NAME = "idea.log";
+
+  public static @NotNull Path getLogFilePath() {
+    return Path.of(PathManager.getLogPath(), LOG_FILE_NAME);
+  }
+
   LoggerFactory() throws Exception {
     System.setProperty("log4j.defaultInitOverride", "true");
 
     String configPath = System.getProperty(PathManager.PROPERTY_LOG_CONFIG_FILE);
     if (configPath != null) {
-      Path configFile = Paths.get(configPath);
+      Path configFile = Path.of(configPath);
       if (!configFile.isAbsolute()) {
-        configFile = Paths.get(PathManager.getBinPath()).resolve(configPath);  // look from the 'bin/' directory where log.xml was used to be
+        configFile = Path.of(PathManager.getBinPath()).resolve(configPath);  // look from the 'bin/' directory where log.xml was used to be
       }
       if (Files.exists(configFile)) {
         configureFromXmlFile(configFile);
@@ -47,11 +52,10 @@ public final class LoggerFactory implements Logger.Factory {
 
   @Override
   public @NotNull Logger getLoggerInstance(@NotNull String name) {
-    IdeaLogger logger = new IdeaLogger(LogManager.getLoggerRepository().getLogger(name));
-    return MutedErrorLogger.isEnabled() ? MutedErrorLogger.of(logger) : logger;
+    return new IdeaLogger(LogManager.getLoggerRepository().getLogger(name));
   }
 
-  private static void configureFromXmlFile(@NotNull Path xmlFile) throws Exception {
+  private static void configureFromXmlFile(Path xmlFile) throws Exception {
     String text = Files.readString(xmlFile);
     text = text.replace(SYSTEM_MACRO, PathManager.getSystemPath().replace("\\", "\\\\"));
     text = text.replace(APPLICATION_MACRO, PathManager.getHomePath().replace("\\", "\\\\"));
@@ -87,16 +91,20 @@ public final class LoggerFactory implements Logger.Factory {
 
     PatternLayout layout = new PatternLayout("%d [%7r] %6p - %30.30c - %m \n");
 
-    RollingFileAppender ideaLog = new RollingFileAppender(layout, PathManager.getLogPath() + "/idea.log", true) {
+    RollingFileAppender ideaLog = new RollingFileAppender() {
       @Override
       public void rollOver() {
         super.rollOver();
-        MutedLogger.dropCaches();
+        IdeaLogger.dropFrequentExceptionsCaches();
       }
     };
+    ideaLog.setFile(getLogFilePath().toString());
+    ideaLog.setLayout(layout);
+    ideaLog.setAppend(true);
     ideaLog.setEncoding(StandardCharsets.UTF_8.name());
     ideaLog.setMaxBackupIndex(12);
     ideaLog.setMaximumFileSize(10_000_000);
+    ideaLog.activateOptions();
     root.addAppender(ideaLog);
 
     ConsoleAppender consoleWarn = new ConsoleAppender(layout, ConsoleAppender.SYSTEM_ERR);
