@@ -1,6 +1,7 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.application;
 
+import com.intellij.configurationStore.StoreUtilKt;
 import com.intellij.diagnostic.VMOptions;
 import com.intellij.ide.BootstrapBundle;
 import com.intellij.ide.actions.ImportSettingsFilenameFilter;
@@ -10,24 +11,23 @@ import com.intellij.ide.plugins.IdeaPluginDescriptorImpl;
 import com.intellij.ide.plugins.PluginDescriptorLoader;
 import com.intellij.ide.plugins.PluginInstaller;
 import com.intellij.ide.plugins.PluginManagerCore;
-import com.intellij.ide.plugins.marketplace.MarketplaceRequests;
 import com.intellij.ide.startup.StartupActionScriptManager;
+import com.intellij.ide.startup.StartupActionScriptManager.ActionCommand;
 import com.intellij.idea.Main;
 import com.intellij.idea.SplashManager;
 import com.intellij.openapi.components.StoragePathMacros;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.fileTypes.FileTypeRegistry;
+import com.intellij.openapi.keymap.impl.KeymapManagerImpl;
 import com.intellij.openapi.progress.EmptyProgressIndicator;
 import com.intellij.openapi.progress.ProcessCanceledException;
 import com.intellij.openapi.progress.ProgressIndicator;
 import com.intellij.openapi.ui.Messages;
 import com.intellij.openapi.updateSettings.impl.PluginDownloader;
-import com.intellij.openapi.util.BuildNumber;
-import com.intellij.openapi.util.Pair;
-import com.intellij.openapi.util.Ref;
-import com.intellij.openapi.util.SystemInfo;
+import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.io.FileUtil;
+import com.intellij.openapi.util.io.NioFiles;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.ui.AppUIUtil;
@@ -47,11 +47,7 @@ import java.awt.*;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringReader;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.DirectoryStream;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.file.*;
 import java.nio.file.attribute.DosFileAttributes;
 import java.nio.file.attribute.FileTime;
 import java.time.Instant;
@@ -67,7 +63,7 @@ import java.util.zip.ZipFile;
 import static com.intellij.ide.GeneralSettings.IDE_GENERAL_XML;
 import static com.intellij.ide.SpecialConfigFiles.*;
 import static com.intellij.openapi.application.CustomConfigMigrationOption.readCustomConfigMigrationOptionAndRemoveMarkerFile;
-import static com.intellij.openapi.application.ImportOldConfigsUsagesCollector.*;
+import static com.intellij.openapi.application.ImportOldConfigsUsagesCollector.ImportOldConfigsState;
 import static com.intellij.openapi.application.ImportOldConfigsUsagesCollector.ImportOldConfigsState.InitialImportScenario.*;
 import static com.intellij.openapi.application.PathManager.OPTIONS_DIRECTORY;
 import static com.intellij.openapi.util.Pair.pair;
@@ -166,6 +162,7 @@ public final class ConfigImportHelper {
       else {
         Pair<Path, FileTime> bestConfigGuess = guessedOldConfigDirs.getFirstItem();
         if (isConfigOld(bestConfigGuess.second)) {
+          log.info("The best config guess [" + bestConfigGuess.first + "] is too old, it won't be used for importing.");
           oldConfigDirAndOldIdePath = showDialogAndGetOldConfigPath(guessedOldConfigDirs.getPaths());
           importScenarioStatistics = SHOW_DIALOG_CONFIGS_ARE_TOO_OLD;
         }
@@ -370,7 +367,7 @@ public final class ConfigImportHelper {
   }
 
   /**
-   * Checks that current user is "new", i. e. this is the first launch of the IDE on this machine.
+   * Checks that current user is "new", i.e. this is the first launch of the IDE on this machine.
    */
   public static boolean isNewUser() {
     return isFirstSession() && !isConfigImported();
@@ -406,10 +403,10 @@ public final class ConfigImportHelper {
   }
 
   static class ConfigDirsSearchResult {
-    private final @NotNull List<? extends Pair<Path, FileTime>> directories;
+    private final List<Pair<Path, FileTime>> directories;
     private final boolean fromSameProduct;
 
-    ConfigDirsSearchResult(@NotNull List<? extends Pair<Path, FileTime>> directories, boolean fromSameProduct) {
+    private ConfigDirsSearchResult(List<Pair<Path, FileTime>> directories, boolean fromSameProduct) {
       this.directories = directories;
       this.fromSameProduct = fromSameProduct;
     }
@@ -424,6 +421,14 @@ public final class ConfigImportHelper {
 
     @NotNull Pair<Path, FileTime> getFirstItem() {
       return directories.get(0);
+    }
+
+    @NotNull @NlsSafe String getNameAndVersion(@NotNull Path config) {
+      return getNameWithVersion(config);
+    }
+
+    @NotNull List<Path> findRelatedDirectories(@NotNull Path config, boolean forAutoClean) {
+      return getRelatedDirectories(config, forAutoClean);
     }
   }
 
@@ -489,7 +494,7 @@ public final class ConfigImportHelper {
       exact = false;
     }
     else {
-      return new ConfigDirsSearchResult(Collections.emptyList(), true);
+      return new ConfigDirsSearchResult(List.of(), true);
     }
 
     List<Pair<Path, FileTime>> lastModified = new ArrayList<>();
@@ -508,7 +513,7 @@ public final class ConfigImportHelper {
         catch (IOException ignore) { }
       }
 
-      lastModified.add(Pair.create(candidate, max != null ? max : FileTime.fromMillis(0)));
+      lastModified.add(pair(candidate, max != null ? max : FileTime.fromMillis(0)));
     }
 
     lastModified.sort((o1, o2) -> {
@@ -518,6 +523,7 @@ public final class ConfigImportHelper {
       }
       return diff;
     });
+
     return new ConfigDirsSearchResult(lastModified, exact);
   }
 
@@ -694,11 +700,6 @@ public final class ConfigImportHelper {
       }
       if (oldPluginsDir == null) {
         oldPluginsDir = oldConfigDir.getFileSystem().getPath(defaultPluginsPath(getNameWithVersion(oldConfigDir)));
-        // temporary code; safe to remove after 2020.1 branch is created
-        if (!Files.isDirectory(oldPluginsDir) && oldPluginsDir.toString().contains("2020.1")) {
-          oldPluginsDir = oldConfigDir.getFileSystem().getPath(
-            defaultPluginsPath(getNameWithVersion(oldConfigDir).replace("2020.1", "2019.3")).replace("2019.3", "2020.1"));
-        }
       }
     }
 
@@ -722,7 +723,7 @@ public final class ConfigImportHelper {
     boolean headless;
     boolean importPlugins = true;
     BuildNumber compatibleBuildNumber = null;
-    MarketplaceRequests marketplaceRequests = null;
+    ThrowableNotNullBiFunction<? super String, ? super ProgressIndicator, ? extends File, ? extends IOException> downloadFunction = null;
     Path bundledPluginPath = null;
     Map<PluginId, Set<String>> brokenPluginVersions = null;
 
@@ -747,7 +748,7 @@ public final class ConfigImportHelper {
     // the filter prevents web token reuse and accidental overwrite of files already created by this instance (port/lock/tokens etc.)
     FileUtil.copyDir(oldConfigDir.toFile(), newConfigDir.toFile(), file -> !blockImport(file.toPath(), oldConfigDir, newConfigDir, oldPluginsDir));
 
-    List<StartupActionScriptManager.ActionCommand> actionCommands = loadStartupActionScript(oldConfigDir, oldIdeHome, oldPluginsDir);
+    List<ActionCommand> actionCommands = loadStartupActionScript(oldConfigDir, oldIdeHome, oldPluginsDir);
 
     // copy plugins, unless new plugin directory is not empty (the plugin manager will sort out incompatible ones)
     if (!options.importPlugins) {
@@ -769,44 +770,45 @@ public final class ConfigImportHelper {
 
     // apply stale plugin updates
     StartupActionScriptManager.executeActionScriptCommands(actionCommands, oldPluginsDir, newPluginsDir);
+
     updateVMOptions(newConfigDir, log);
   }
 
-  private static @NotNull List<StartupActionScriptManager.ActionCommand> loadStartupActionScript(Path oldConfigDir,
-                                                                                                 @Nullable Path oldIdeHome,
-                                                                                                 Path oldPluginsDir) throws IOException {
-    if (!Files.isDirectory(oldPluginsDir)) {
-      return Collections.emptyList();
-    }
-
-    Path oldSystemDir = oldConfigDir.getParent().resolve(SYSTEM);
-    if (!Files.isDirectory(oldSystemDir)) {
-      oldSystemDir = null;
-      if (oldIdeHome != null) {
-        oldSystemDir = getSettingsPath(oldIdeHome, PathManager.PROPERTY_SYSTEM_PATH, ConfigImportHelper::defaultSystemPath);
+  private static List<ActionCommand> loadStartupActionScript(Path oldConfigDir, @Nullable Path oldIdeHome, Path oldPluginsDir) throws IOException {
+    if (Files.isDirectory(oldPluginsDir)) {
+      Path oldSystemDir = oldConfigDir.getParent().resolve(SYSTEM);
+      if (!Files.isDirectory(oldSystemDir)) {
+        oldSystemDir = null;
+        if (oldIdeHome != null) {
+          oldSystemDir = getSettingsPath(oldIdeHome, PathManager.PROPERTY_SYSTEM_PATH, ConfigImportHelper::defaultSystemPath);
+        }
+        if (oldSystemDir == null) {
+          oldSystemDir = oldConfigDir.getFileSystem().getPath(defaultSystemPath(getNameWithVersion(oldConfigDir)));
+        }
       }
-      if (oldSystemDir == null) {
-        oldSystemDir = oldConfigDir.getFileSystem().getPath(defaultSystemPath(getNameWithVersion(oldConfigDir)));
+      Path script = oldSystemDir.resolve(PLUGINS + '/' + StartupActionScriptManager.ACTION_SCRIPT_FILE);  // PathManager#getPluginTempPath
+      if (Files.isRegularFile(script)) {
+        return StartupActionScriptManager.loadActionScript(script);
       }
     }
-    Path script = oldSystemDir.resolve(PLUGINS + '/' + StartupActionScriptManager.ACTION_SCRIPT_FILE);  // PathManager#getPluginTempPath
-    return StartupActionScriptManager.loadActionScript(script);
+    return List.of();
   }
 
   private static void migratePlugins(Path oldPluginsDir,
                                      Path newPluginsDir,
-                                     List<? extends StartupActionScriptManager.ActionCommand> actionCommands,
+                                     List<ActionCommand> actionCommands,
                                      ConfigImportOptions options) throws IOException {
     Logger log = options.log;
     try {
       List<IdeaPluginDescriptorImpl> pluginsToMigrate = new ArrayList<>();
       List<IdeaPluginDescriptorImpl> incompatiblePlugins = new ArrayList<>();
       List<PluginId> pendingUpdates = collectPendingPluginUpdates(actionCommands, options);
-      PluginManagerCore.getDescriptorsToMigrate(oldPluginsDir,
-                                                options.compatibleBuildNumber,
-                                                options.bundledPluginPath,
-                                                options.brokenPluginVersions,
-                                                pluginsToMigrate, incompatiblePlugins);
+      PluginDescriptorLoader.getDescriptorsToMigrate(oldPluginsDir,
+                                                     options.compatibleBuildNumber,
+                                                     options.bundledPluginPath,
+                                                     options.brokenPluginVersions,
+                                                     pluginsToMigrate,
+                                                     incompatiblePlugins);
 
       migratePlugins(newPluginsDir, pluginsToMigrate, pendingUpdates, log);
 
@@ -828,6 +830,7 @@ public final class ConfigImportHelper {
             dialog.setVisible(true);
           });
         }
+
         // Migrate plugins for which we couldn't download updates
         migratePlugins(newPluginsDir, incompatiblePlugins, pendingUpdates, log);
       }
@@ -838,10 +841,11 @@ public final class ConfigImportHelper {
     }
   }
 
-  private static List<PluginId> collectPendingPluginUpdates(List<? extends StartupActionScriptManager.ActionCommand> commands,
-                                                            ConfigImportOptions options) {
+  private static List<PluginId> collectPendingPluginUpdates(List<ActionCommand> commands, ConfigImportOptions options) {
+    if (commands.isEmpty()) return List.of();
+
     List<PluginId> result = new ArrayList<>();
-    for (StartupActionScriptManager.ActionCommand command : commands) {
+    for (ActionCommand command : commands) {
       String source;
       if (command instanceof StartupActionScriptManager.CopyCommand) {
         source = ((StartupActionScriptManager.CopyCommand)command).getSource();
@@ -852,7 +856,6 @@ public final class ConfigImportHelper {
       else {
         continue;
       }
-
       try {
         IdeaPluginDescriptorImpl descriptor = PluginDescriptorLoader.loadDescriptorFromArtifact(Paths.get(source), null);
         if (descriptor != null) {
@@ -905,8 +908,8 @@ public final class ConfigImportHelper {
 
       try {
         PluginDownloader downloader = PluginDownloader.createDownloader(plugin);
-        if (options.marketplaceRequests != null) {
-          downloader.setMarketplaceRequests(options.marketplaceRequests);
+        if (options.downloadFunction != null) {
+          downloader.setDownloadFunction(options.downloadFunction);
         }
         if (downloader.prepareToInstallAndLoadDescriptor(indicator, false) != null) {
           PluginInstaller.unpackPlugin(downloader.getFile().toPath(), newPluginsDir);
@@ -948,25 +951,24 @@ public final class ConfigImportHelper {
   static void setKeymapIfNeeded(@NotNull Path oldConfigDir, @NotNull Path newConfigDir, @NotNull Logger log) {
     String nameWithVersion = getNameWithVersion(oldConfigDir);
     Matcher m = Pattern.compile("\\.?[^\\d]+(\\d+\\.\\d+)?").matcher(nameWithVersion);
-    if (!m.matches() || VersionComparatorUtil.compare("2019.1", m.group(1)) < 0) {
-      return;
-    }
-
-    Path keymapOptionFile = newConfigDir.resolve("options/keymap.xml");
-    if (Files.exists(keymapOptionFile)) {
-      return;
-    }
-
-    try {
-      Files.createDirectories(keymapOptionFile.getParent());
-      Files.write(keymapOptionFile, ("<application>\n" +
-                                    "  <component name=\"KeymapManager\">\n" +
-                                    "    <active_keymap name=\"Mac OS X\" />\n" +
-                                    "  </component>\n" +
-                                    "</application>").getBytes(StandardCharsets.UTF_8));
-    }
-    catch (IOException e) {
-      log.error("Cannot set keymap", e);
+    if (m.matches() && VersionComparatorUtil.compare("2019.1", m.group(1)) >= 0) {
+      String keymapFileSpec = StoreUtilKt.getDefaultStoragePathSpec(KeymapManagerImpl.class);
+      if (keymapFileSpec != null) {
+        Path keymapOptionFile = newConfigDir.resolve(OPTIONS_DIRECTORY).resolve(keymapFileSpec);
+        if (!Files.exists(keymapOptionFile)) {
+          try {
+            Files.createDirectories(keymapOptionFile.getParent());
+            Files.writeString(keymapOptionFile, ("<application>\n" +
+                                                 "  <component name=\"KeymapManager\">\n" +
+                                                 "    <active_keymap name=\"Mac OS X\" />\n" +
+                                                 "  </component>\n" +
+                                                 "</application>"));
+          }
+          catch (IOException e) {
+            log.error("Cannot set keymap", e);
+          }
+        }
+      }
     }
   }
 
@@ -1031,8 +1033,54 @@ public final class ConfigImportHelper {
                             : SystemProperties.getUserHome() + "/." + selector + '/' + SYSTEM;
   }
 
+  private static String defaultLogsPath(String selector) {
+    return newOrUnknown(selector) ? PathManager.getDefaultLogPathFor(selector) :
+           SystemInfo.isMac ? SystemProperties.getUserHome() + "/Library/Logs/" + selector
+                            : SystemProperties.getUserHome() + "/." + selector + '/' + SYSTEM + "/logs";
+  }
+
   private static boolean newOrUnknown(String selector) {
     Matcher m = SELECTOR_PATTERN.matcher(selector);
     return !m.matches() || "2020.1".compareTo(m.group(2)) <= 0;
+  }
+
+  private static List<Path> getRelatedDirectories(Path config, boolean forAutoClean) {
+    String selector = getNameWithVersion(config);
+    FileSystem fs = config.getFileSystem();
+    Path system = fs.getPath(defaultSystemPath(selector));
+
+    if (!forAutoClean) {
+      Path commonParent = config.getParent();
+      if (commonParent.equals(system.getParent())) {
+        List<Path> files = NioFiles.list(commonParent);
+        if (files.size() == 1 || files.size() == 2 && files.containsAll(List.of(config, system))) {
+          return List.of(commonParent);
+        }
+      }
+    }
+
+    List<Path> result = new ArrayList<>();
+
+    if (!forAutoClean) {
+      result.add(config);
+    }
+
+    if (Files.exists(system)) {
+      result.add(system);
+    }
+
+    if (!forAutoClean) {
+      Path plugins = fs.getPath(defaultPluginsPath(selector));
+      if (!plugins.startsWith(config) && Files.exists(plugins)) {
+        result.add(plugins);
+      }
+    }
+
+    Path logs = fs.getPath(defaultLogsPath(selector));
+    if (!logs.startsWith(system) && Files.exists(logs)) {
+      result.add(logs);
+    }
+
+    return result;
   }
 }
