@@ -1,36 +1,42 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.ide.plugins;
 
+import com.intellij.idea.Bombed;
 import com.intellij.openapi.extensions.PluginId;
 import com.intellij.openapi.util.BuildNumber;
-import com.intellij.openapi.util.JDOMUtil;
-import com.intellij.openapi.util.SafeJdomFactory;
 import com.intellij.openapi.util.io.IoTestUtil;
+import com.intellij.openapi.util.text.HtmlChunk;
 import com.intellij.openapi.util.text.StringUtil;
+import com.intellij.platform.util.plugins.DataLoader;
+import com.intellij.platform.util.plugins.LocalFsDataLoader;
 import com.intellij.testFramework.PlatformTestUtil;
 import com.intellij.testFramework.UsefulTestCase;
 import com.intellij.testFramework.rules.TempDirectory;
+import com.intellij.util.XmlDomReader;
+import com.intellij.util.XmlElement;
 import org.easymock.EasyMock;
-import org.jdom.Element;
-import org.jdom.JDOMException;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.junit.Rule;
 import org.junit.Test;
 
+import javax.xml.stream.XMLOutputFactory;
+import javax.xml.stream.XMLStreamException;
+import javax.xml.stream.XMLStreamWriter;
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.Calendar;
 import java.util.Collections;
 import java.util.Map;
-import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static com.intellij.ide.plugins.DynamicPluginsTestUtil.loadDescriptorInTest;
 import static com.intellij.openapi.util.io.IoTestUtil.assumeSymLinkCreationIsSupported;
 import static com.intellij.testFramework.assertions.Assertions.assertThat;
+import static java.util.Objects.requireNonNull;
 import static org.easymock.EasyMock.expect;
 import static org.easymock.EasyMock.replay;
 import static org.junit.Assert.*;
@@ -123,9 +129,9 @@ public class PluginManagerTest {
   }
 
   @Test
+  @Bombed(user = "Vladimir Krivosheev / Andrew Kozlow", day = 1, month = Calendar.SEPTEMBER, year = 2021)
   public void testSimplePluginSort() throws Exception {
-    // muted failure, investigation is assigned
-    doPluginSortTest("simplePluginSort", false);
+     doPluginSortTest("simplePluginSort", false);
   }
 
   @Test
@@ -135,7 +141,7 @@ public class PluginManagerTest {
 
   @Test
   public void testModulePluginIdContract() {
-    Path pluginsPath = Paths.get(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "withModules");
+    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "withModules");
     IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath, Collections.emptySet(), true);
     Map<PluginId, IdeaPluginDescriptorImpl> idMap = PluginManagerCore.buildPluginIdMap(Collections.singletonList(descriptorBundled));
     PluginId moduleId = PluginId.getId("foo.bar");
@@ -145,7 +151,7 @@ public class PluginManagerTest {
 
   @Test
   public void testIdentifyPreInstalledPlugins() {
-    Path pluginsPath = Paths.get(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
+    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
     IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), Collections.emptySet(), true);
     IdeaPluginDescriptorImpl descriptorInstalled = loadDescriptorInTest(pluginsPath.resolve("updated"), Collections.emptySet(), false);
     assertEquals(descriptorBundled.getPluginId(), descriptorInstalled.getPluginId());
@@ -155,14 +161,14 @@ public class PluginManagerTest {
     assertPluginPreInstalled(loadingResult, descriptorInstalled.getPluginId());
   }
 
-  private @NotNull static PluginLoadingResult createPluginLoadingResult(boolean checkModuleDependencies) {
+  private static @NotNull PluginLoadingResult createPluginLoadingResult(boolean checkModuleDependencies) {
     BuildNumber buildNumber = BuildNumber.fromString("2042.42");
     return new PluginLoadingResult(Collections.emptyMap(), () -> buildNumber, checkModuleDependencies);
   }
 
   @Test
   public void testIdentifyPreInstalledPluginsInReverseOrder() {
-    Path pluginsPath = Paths.get(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
+    Path pluginsPath = Path.of(PlatformTestUtil.getPlatformTestDataPath(), "plugins", "updatedBundled");
     IdeaPluginDescriptorImpl descriptorBundled = loadDescriptorInTest(pluginsPath.resolve("bundled"), Collections.emptySet(), true);
     IdeaPluginDescriptorImpl descriptorInstalled = loadDescriptorInTest(pluginsPath.resolve("updated"), Collections.emptySet(), false);
     assertEquals(descriptorBundled.getPluginId(), descriptorInstalled.getPluginId());
@@ -183,34 +189,39 @@ public class PluginManagerTest {
     assertThat(configPath.resolve(DisabledPluginsState.DISABLED_PLUGINS_FILENAME)).hasContent("a" + System.lineSeparator());
   }
 
-  private static void assertPluginPreInstalled(@NotNull PluginLoadingResult loadingResult, PluginId pluginId) {
-    assertTrue("Plugin should be pre installed", loadingResult.getShadowedBundledIds().contains(pluginId));
+  private static void assertPluginPreInstalled(PluginLoadingResult loadingResult, PluginId pluginId) {
+    assertTrue("Plugin should be pre installed", loadingResult.shadowedBundledIds.contains(pluginId));
   }
 
-  private static void doPluginSortTest(@NotNull String testDataName, boolean isBundled) throws IOException, JDOMException {
+  private static void doPluginSortTest(String testDataName, boolean isBundled) throws IOException, XMLStreamException {
     PluginManagerCore.getAndClearPluginLoadingErrors();
     PluginManagerState loadPluginResult = loadAndInitializeDescriptors(testDataName + ".xml", isBundled);
-    String actual = StringUtil.join(loadPluginResult.sortedPlugins, o -> (o.isEnabled() ? "+ " : "  ") + o.getPluginId().getIdString(), "\n") +
-                    "\n\n" + PluginManagerCore.getAndClearPluginLoadingErrors().stream().map(html -> html.toString().replace("<br/>", "\n")).collect(Collectors.joining("\n"));
-    UsefulTestCase.assertSameLinesWithFile(new File(getTestDataPath(), testDataName + ".txt").getPath(), actual);
+    StringBuilder text = new StringBuilder();
+    for (IdeaPluginDescriptorImpl descriptor : loadPluginResult.pluginSet.enabledPlugins) {
+      text.append(descriptor.isEnabled() ? "+ " : "  ").append(descriptor.getPluginId().getIdString()).append('\n');
+    }
+    text.append("\n\n");
+    for (HtmlChunk html : PluginManagerCore.getAndClearPluginLoadingErrors()) {
+      text.append(html.toString().replace("<br/>", "\n")).append('\n');
+    }
+    UsefulTestCase.assertSameLinesWithFile(new File(getTestDataPath(), testDataName + ".txt").getPath(), text.toString());
   }
 
   private static void assertConvertsTo(String untilBuild, String result) {
-    assertEquals(result, IdeaPluginDescriptorImpl.convertExplicitBigNumberInUntilBuildToStar(untilBuild));
+    assertEquals(result, PluginManager.convertExplicitBigNumberInUntilBuildToStar(untilBuild));
   }
 
   private static void assertIncompatible(String ideVersion, String sinceBuild, String untilBuild) {
     assertNotNull(checkCompatibility(ideVersion, sinceBuild, untilBuild));
   }
 
-  @Nullable
-  private static String checkCompatibility(String ideVersion, String sinceBuild, String untilBuild) {
+  private static @Nullable String checkCompatibility(String ideVersion, String sinceBuild, String untilBuild) {
     IdeaPluginDescriptor mock = EasyMock.niceMock(IdeaPluginDescriptor.class);
     expect(mock.getSinceBuild()).andReturn(sinceBuild).anyTimes();
     expect(mock.getUntilBuild()).andReturn(untilBuild).anyTimes();
     replay(mock);
     PluginLoadingError error =
-      PluginManagerCore.checkBuildNumberCompatibility(mock, Objects.requireNonNull(BuildNumber.fromString(ideVersion)));
+      PluginManagerCore.checkBuildNumberCompatibility(mock, requireNonNull(BuildNumber.fromString(ideVersion)));
     return error != null ? error.getDetailedMessage() : null;
   }
 
@@ -218,35 +229,92 @@ public class PluginManagerTest {
     assertNull(checkCompatibility(ideVersion, sinceBuild, untilBuild));
   }
 
-  private static @NotNull PluginManagerState loadAndInitializeDescriptors(@NotNull String testDataName, boolean isBundled)
-    throws IOException, JDOMException {
-    Path file = Paths.get(getTestDataPath(), testDataName);
-    DescriptorListLoadingContext parentContext = new DescriptorListLoadingContext(0, Collections.emptySet(), createPluginLoadingResult(true));
+  private static PluginManagerState loadAndInitializeDescriptors(String testDataName, boolean isBundled) throws IOException, XMLStreamException {
+    Path file = Path.of(getTestDataPath(), testDataName);
+    DescriptorListLoadingContext parentContext =
+      new DescriptorListLoadingContext(Collections.emptySet(), createPluginLoadingResult(true), false, false, false, false);
 
-    Element root = JDOMUtil.load(file, parentContext.getXmlFactory());
-    BasePathResolver pathResolver = new BasePathResolver() {
+    XmlElement root = XmlDomReader.readXmlAsModel(Files.newInputStream(file));
+    PathResolver pathResolver = new PathResolver() {
       @Override
-      public @NotNull Element resolvePath(@NotNull Path basePath,
-                                          @NotNull String relativePath,
-                                          @NotNull SafeJdomFactory jdomFactory) {
-        for (Element child : root.getChildren("config-file-idea-plugin")) {
-          String url = Objects.requireNonNull(child.getAttributeValue("url"));
-          if (url.endsWith("/" + relativePath)) return child;
+      public boolean isFlat() {
+        return false;
+      }
+
+      @Override
+      public boolean loadXIncludeReference(@NotNull RawPluginDescriptor readInto,
+                                           @NotNull ReadModuleContext readContext,
+                                           @NotNull DataLoader dataLoader,
+                                           @Nullable String base,
+                                           @NotNull String relativePath) {
+        throw new UnsupportedOperationException();
+      }
+
+      @Override
+      public @NotNull RawPluginDescriptor resolvePath(@NotNull ReadModuleContext readContext,
+                                                      @NotNull DataLoader dataLoader,
+                                                      @NotNull String relativePath,
+                                                      @Nullable RawPluginDescriptor readInto) {
+        for (XmlElement child : root.children) {
+          if (child.name.equals("config-file-idea-plugin")) {
+            String url = requireNonNull(child.getAttributeValue("url"));
+            if (url.endsWith("/" + relativePath)) {
+              try {
+                return XmlReader.readModuleDescriptor(elementAsBytes(child), readContext, this, dataLoader, null, readInto, null);
+              }
+              catch (XMLStreamException e) {
+                throw new RuntimeException(e);
+              }
+            }
+          }
         }
         throw new AssertionError("Unexpected: " + relativePath);
       }
+
+      @Override
+      public @NotNull RawPluginDescriptor resolveModuleFile(@NotNull ReadModuleContext readContext,
+                                                            @NotNull DataLoader dataLoader,
+                                                            @NotNull String path,
+                                                            @Nullable RawPluginDescriptor readInto) {
+        return resolvePath(readContext, dataLoader, path, readInto);
+      }
     };
 
-    for (Element element : root.getChildren("idea-plugin")) {
-      String url = element.getAttributeValue("url");
-      Path pluginPath = Paths.get(Objects.requireNonNull(url));
-      IdeaPluginDescriptorImpl descriptor = new IdeaPluginDescriptorImpl(pluginPath, pluginPath, isBundled);
-      descriptor.readExternal(element, pathResolver, parentContext, descriptor);
+    for (XmlElement element : root.children) {
+      if (!element.name.equals("idea-plugin")) {
+        continue;
+      }
+
+      Path pluginPath = Path.of(StringUtil.trimStart(requireNonNull(element.getAttributeValue("url")), "file://"));
+      IdeaPluginDescriptorImpl descriptor = PluginDescriptorTestKt.createFromDescriptor(
+        pluginPath, isBundled, elementAsBytes(element), parentContext, pathResolver, new LocalFsDataLoader(pluginPath));
       parentContext.result.add(descriptor,  /* overrideUseIfCompatible = */ false);
+      descriptor.jarFiles = Collections.emptyList();
     }
     parentContext.close();
     parentContext.result.finishLoading();
     return PluginManagerCore.initializePlugins(parentContext, PluginManagerTest.class.getClassLoader(), /* checkEssentialPlugins = */ false);
+  }
+
+  private static byte @NotNull [] elementAsBytes(XmlElement child) throws XMLStreamException {
+    ByteArrayOutputStream byteOut = new ByteArrayOutputStream();
+    XMLStreamWriter writer = XMLOutputFactory.newDefaultFactory().createXMLStreamWriter(byteOut, "utf-8");
+    writeXmlElement(child, writer);
+    return byteOut.toByteArray();
+  }
+
+  private static void writeXmlElement(XmlElement element, XMLStreamWriter writer) throws XMLStreamException {
+    writer.writeStartElement(element.name);
+    for (Map.Entry<String, String> entry : element.attributes.entrySet()) {
+      writer.writeAttribute(entry.getKey(), entry.getValue());
+    }
+    if (element.content != null) {
+      writer.writeCharacters(element.content);
+    }
+    for (XmlElement child : element.children) {
+      writeXmlElement(child, writer);
+    }
+    writer.writeEndElement();
   }
 
   /** @noinspection unused */
@@ -260,21 +328,26 @@ public class PluginManagerTest {
       sb.append("\n  <idea-plugin url=\"file://out/").append(d.getPluginPath().getFileName().getParent()).append("/META-INF/plugin.xml\">");
       sb.append("\n    <id>").append(escape.apply(d.getPluginId().getIdString())).append("</id>");
       sb.append("\n    <name>").append(StringUtil.escapeXmlEntities(d.getName())).append("</name>");
-      for (PluginId module : d.getModules()) {
+      for (PluginId module : d.modules) {
         sb.append("\n    <module value=\"").append(module.getIdString()).append("\"/>");
       }
-      for (PluginDependency dependency : d.getPluginDependencies()) {
-        if (!dependency.isOptional) {
-          sb.append("\n    <depends>").append(escape.apply(dependency.id.getIdString())).append("</depends>");
+      for (PluginDependency dependency : d.pluginDependencies) {
+        if (!dependency.isOptional()) {
+          sb.append("\n    <depends>").append(escape.apply(dependency.getPluginId().getIdString())).append("</depends>");
         }
         else {
           IdeaPluginDescriptorImpl optionalConfigPerId = dependency.subDescriptor;
           if (optionalConfigPerId == null) {
-            sb.append("\n    <depends optional=\"true\" config-file=\"???\">").append(escape.apply(dependency.id.getIdString())).append("</depends>");
+            sb.append("\n    <depends optional=\"true\" config-file=\"???\">")
+              .append(escape.apply(dependency.getPluginId().getIdString()))
+              .append("</depends>");
           }
           else {
               sb.append("\n    <depends optional=\"true\" config-file=\"")
-                .append(optionalConfigPerId.getPluginPath().getFileName().toString()).append("\">").append(escape.apply(dependency.id.getIdString())).append("</depends>");
+                .append(optionalConfigPerId.getPluginPath().getFileName().toString())
+                .append("\">")
+                .append(escape.apply(dependency.getPluginId().getIdString()))
+                .append("</depends>");
           }
         }
       }
