@@ -1,5 +1,4 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
-
+// Copyright 2000-2021 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.util.indexing.impl;
 
 import com.intellij.openapi.diagnostic.Logger;
@@ -9,7 +8,6 @@ import com.intellij.util.indexing.containers.ChangeBufferingList;
 import com.intellij.util.indexing.containers.IntIdsIterator;
 import com.intellij.util.io.DataExternalizer;
 import com.intellij.util.io.DataInputOutputUtil;
-import gnu.trove.THashMap;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -17,16 +15,14 @@ import org.jetbrains.annotations.Nullable;
 import java.io.DataInputStream;
 import java.io.DataOutput;
 import java.io.IOException;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.NoSuchElementException;
+import java.util.*;
+import java.util.function.IntPredicate;
 
 /**
  * @author Eugene Zhuravlev
  */
 @ApiStatus.Internal
-public class ValueContainerImpl<Value> extends UpdatableValueContainer<Value> implements Cloneable{
+public final class ValueContainerImpl<Value> extends UpdatableValueContainer<Value> implements Cloneable{
   private static final Logger LOG = Logger.getInstance(ValueContainerImpl.class);
   private static final Object myNullValue = new Object();
 
@@ -97,7 +93,7 @@ public class ValueContainerImpl<Value> extends UpdatableValueContainer<Value> im
     for (final InvertedIndexValueIterator<Value> valueIterator = getValueIterator(); valueIterator.hasNext();) {
       final Value value = valueIterator.next();
 
-      if (valueIterator.getValueAssociationPredicate().contains(inputId)) {
+      if (valueIterator.getValueAssociationPredicate().test(inputId)) {
         if (fileSetObjects == null) {
           fileSetObjects = new SmartList<>();
           valueObjects = new SmartList<>();
@@ -150,7 +146,7 @@ public class ValueContainerImpl<Value> extends UpdatableValueContainer<Value> im
         Object inputIdMappingValue = mapping.get(mappingValue);
         // prevent NPEs on file set due to Value class being mutable or having inconsistent equals wrt disk persistence
         // (instance that is serialized and new instance created with deserialization from the same bytes are expected to be equal)
-        myInputIdMappingValue = inputIdMappingValue != null ? inputIdMappingValue : new Integer(0);
+        myInputIdMappingValue = inputIdMappingValue != null ? inputIdMappingValue : Integer.valueOf(0);
       }
     }
   }
@@ -286,8 +282,7 @@ public class ValueContainerImpl<Value> extends UpdatableValueContainer<Value> im
     }
   }
 
-  @NotNull
-  private static IntPredicate getPredicateOutOfFileSetObject(@Nullable Object input) {
+  private static @NotNull IntPredicate getPredicateOutOfFileSetObject(@Nullable Object input) {
     if (input == null) return EMPTY_PREDICATE;
 
     if (input instanceof Integer) {
@@ -330,11 +325,10 @@ public class ValueContainerImpl<Value> extends UpdatableValueContainer<Value> im
       ValueToInputMap<Value> mapping = asMapping();
       if (mapping != null) {
         final ValueToInputMap<Value> cloned = mapping.clone();
-        cloned.forEachEntry((key, val) -> {
+        cloned.forEach((key, val) -> {
           if (val instanceof ChangeBufferingList) {
             cloned.put(key, ((ChangeBufferingList)val).clone());
           }
-          return true;
         });
 
         clone.myInputIdMapping = cloned;
@@ -581,7 +575,7 @@ public class ValueContainerImpl<Value> extends UpdatableValueContainer<Value> im
   private static final IntPredicate EMPTY_PREDICATE = __ -> false;
 
   // a class to distinguish a difference between user-value with THashMap type and internal value container
-  private static class ValueToInputMap<Value> extends THashMap<Value, Object> {
+  private static final class ValueToInputMap<Value> extends HashMap<Value, Object> {
     ValueToInputMap(int size) {
       super(size);
     }
