@@ -1,9 +1,6 @@
 package org.jetbrains.plugins.textmate.bundles;
 
-import com.intellij.openapi.util.NlsSafe;
-import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.textmate.Constants;
@@ -20,8 +17,8 @@ import static java.util.Collections.emptyList;
 
 public class Bundle {
   // all extensions should be lowercased
-  private static final FileFilter SYNTAX_FILES_FILTER = new BundleFilesFilter("tmlanguage", "plist", "tmlanguage.json");
-  private static final FileFilter PREFERENCE_FILES_FILTER = new BundleFilesFilter("tmpreferences", "plist");
+  @SuppressWarnings("SpellCheckingInspection") private static final FileFilter SYNTAX_FILES_FILTER = new BundleFilesFilter("tmlanguage", "plist", "tmlanguage.json");
+  @SuppressWarnings("SpellCheckingInspection") private static final FileFilter PREFERENCE_FILES_FILTER = new BundleFilesFilter("tmpreferences", "plist");
 
   protected final String myName;
   protected final File bundleFile;
@@ -33,42 +30,33 @@ public class Bundle {
     myType = type;
   }
 
-  @NlsSafe
-  @NotNull
-  public String getName() {
+  public @NotNull String getName() {
     return myName;
   }
 
-  @NotNull
-  public Collection<File> getGrammarFiles() {
+  public @NotNull Collection<File> getGrammarFiles() {
     return getFilesInBundle(myType.getSyntaxesPath(), SYNTAX_FILES_FILTER);
   }
 
-  @NotNull
-  public Collection<File> getPreferenceFiles() {
+  public @NotNull Collection<File> getPreferenceFiles() {
     return getFilesInBundle(myType.getPreferencesPath(), PREFERENCE_FILES_FILTER);
   }
 
-  @NotNull
-  public Collection<File> getSnippetFiles() {
+  public @NotNull Collection<File> getSnippetFiles() {
     return getFilesInBundle(myType.getSnippetsPath(), new BundleFilesFilter(myType.getSnippetFileExtensions()));
   }
 
-  @NotNull
-  public BundleType getType() {
+  public @NotNull BundleType getType() {
     return myType;
   }
 
-  @NotNull
-  private Collection<File> getFilesInBundle(@NotNull String path, @Nullable FileFilter filter) {
-    File directory = new File(bundleFile, path);
+  private @NotNull Collection<File> getFilesInBundle(@NotNull String path, @Nullable FileFilter filter) {
     File[] files = null;
     try {
-      files = directory.listFiles(filter);
+      files = new File(bundleFile, path).listFiles(filter);
     }
-    catch (SecurityException ignore) {
-    }
-    return files != null && files.length > 0 ? ContainerUtil.set(files) : Collections.emptySet();
+    catch (SecurityException ignore) { }
+    return files != null && files.length > 0 ? Set.of(files) : Collections.emptySet();
   }
 
   @Override
@@ -78,21 +66,17 @@ public class Bundle {
 
     Bundle bundle = (Bundle)o;
 
-    return FileUtil.filesEqual(bundleFile, bundle.bundleFile);
+    return FileUtilRt.filesEqual(bundleFile, bundle.bundleFile);
   }
 
   @Override
   public int hashCode() {
-    return FileUtil.fileHashCode(bundleFile);
+    return FileUtilRt.pathHashCode(bundleFile.getPath());
   }
 
   @Override
   public String toString() {
-    return "Bundle{" +
-           "name='" + myName + '\'' +
-           ", path='" + bundleFile + '\'' +
-           ", type=" + myType +
-           '}';
+    return "Bundle{name='" + myName + "', path='" + bundleFile + "', type=" + myType + '}';
   }
 
 
@@ -104,11 +88,11 @@ public class Bundle {
     return Collections.singletonList(PreferencesReadUtil.retrieveSettingsPlist(plistReader.read(file)));
   }
 
-  public static class BundleFilesFilter implements FileFilter {
+  private static class BundleFilesFilter implements FileFilter {
     private final Set<String> myExtensions;
 
-    public BundleFilesFilter(String... extensions) {
-      myExtensions = ContainerUtil.set(extensions);
+    private BundleFilesFilter(String... extensions) {
+      myExtensions = Set.of(extensions);
     }
 
     @Override
